On translation_typos corrected

--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -11,7 +11,7 @@ slug: 翻译
 
 这时我想起了大学的时候，为了考研，买了本非常经典的英文生物化学教材的翻译本，是由复旦大学一位德高望重的老师领衔翻译的。想在回想起来，我复习考研大概有三分之二的时间用来跟这本书搏斗了，并且惨败。我确信我认识书里所有的汉字，但是很多时候他们连在一起，我看起来就觉得陌生了，这种感觉，在刚来日本念书时，看到竖版排印，从右到左念的书时也有过。可惜竖版的书看个基本就习惯了，但那本教材一直到最后我都没有能适应过来，什么时候看，都跟听一个失语很久的人在讲一个冗长的故事似的。
 
-平心而论，这本书不算是太坏，如果对生物化学知识有所了解，把它当作参考书，不时查询倒也不错，只是同时要跟难懂的生化知识和不同的译文作战，当年的我实在是力不能至。这是我第一次意识到好的翻译对于介绍国外的书本是如此地重要。之前看过很多英，法，俄，日，西班牙等作家的小说，散文，估计是我比较幸运，遇到的译者都是相当认真，负责的，虽然不知道译文跟原文相比如何，但作为读者，我通过他们为媒介，也感受到了原作者希望带给我的喜怒哀乐，并未被其文字的佶屈聱牙所累，所以一直觉得把书译通了是理所当然的而没有意识到译者们在这背后的付出，我愿意向他们致上我迟来的敬意。之后又遇到很多让我啼笑皆非的翻译，学术交流上，生活里都有，于是开始特别的留心身边的翻译有关的事情。
+平心而论，这本书不算是太坏，如果对生物化学知识有所了解，把它当作参考书，不时查询倒也不错，只是同时要跟难懂的生化知识和不通的译文作战，当年的我实在是力不能至。这是我第一次意识到好的翻译对于介绍国外的书本是如此地重要。之前看过很多英，法，俄，日，西班牙等作家的小说，散文，估计是我比较幸运，遇到的译者都是相当认真，负责的，虽然不知道译文跟原文相比如何，但作为读者，我通过他们为媒介，也感受到了原作者希望带给我的喜怒哀乐，并未被其文字的佶屈聱牙所累，所以一直觉得把书译通了是理所当然的，而没有意识到译者们在这背后的付出，我愿意向他们致上我迟来的敬意。之后又遇到很多让我啼笑皆非的翻译，学术交流上，生活里都有，于是开始特别的留心身边的翻译有关的事情。
 
 先是听说了[门修斯](http://baike.baidu.com/link?url=h-qiETqPLqOz2GNH-o41iPiLuPNvb_fULS74PH-SUO6oYgQjBEtrxMz4QC1-r9pWb6d1bbUXfZ99b2PlQJlp08dnTlBAGO7_wZuWQZGnMZqp8TNm3lCvnng1sGQG_EI9)的故事，我们古代的大哲去了趟外国，回来就名姓全变了，他若地下有知，估计得说“唯见一学棍，未见译者也”。之后是华丽的[常凯申](http://baike.baidu.com/item/%E5%B8%B8%E5%87%AF%E7%94%B3)+[昆仑](www.chinanews.com/cul/2012/01-11/3598042.shtml)二连弹，更让我猝不及防，亮瞎了好眼。蒋，毛二公都不时好惹的，幸而他们都看不到了。当时觉得这几个关键词都还押韵，于是有了下边几句：
 
@@ -64,7 +64,7 @@ slug: 翻译
 解释第一句的时候，就让我感到无比地窘迫，体会到了翻译之难，不过也由此体会到了所谓意向的含义，不过这是另外一个故事了。
 
 
-[^1]:钱钟书，论林纾的翻译
+[^1]:钱钟书,论林纾的翻译
 
 
 
