格式和脚注的微

--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -25,7 +25,7 @@ slug: 翻译
 
 王小波多次提到他的作文，得益于穆旦和王道乾的翻译，这倒是是让我很意外，我从王小波的文章小说里，怎么都看不出穆旦的影子，估计指的是比文字更深些的影响吧。
 
-钱钟书对于翻译过很精辟的讨论，博学如钱先生，精通古文，白话文和数门外语，极好诗词文章，论起来翻译来自然纵横捭阖，东西兼顾，由古及今，他的议论，论的是林琴南的“译“，但其中一些话我觉得是任何要尝试翻译工作的人都该记心上的，于我来说，闻翻译而得译外之意，暂且不提。本来想转录一些钱先生的精彩议论，不过担心鹦鹉学舌，破坏了钱先生文章的美，忍住了。
+钱钟书对于翻译过很精辟的讨论[^2]，博学如钱先生，精通古文，白话文和数门外语，极好诗词文章，论起来翻译来自然纵横捭阖，东西兼顾，由古及今，他的议论，论的是林琴南的“译“，但其中一些话我觉得是任何要尝试翻译工作的人都该记心上的，于我来说，闻翻译而得译外之意，暂且不提。本来想转录一些钱先生的精彩议论，不过担心鹦鹉学舌，破坏了钱先生文章的美，忍住了。
 
 说了半天坏翻译，说几个我觉得好的吧。公认诗最难译，我就举两首诗吧。
 
@@ -48,7 +48,9 @@ slug: 翻译
 解释第一句的时候，就让我感到无比地窘迫，体会到了翻译之难，不过也由此体会到了所谓意象的含义，不过这是另外一个故事了。
 
 
-[^1]:钱钟书,论林纾的翻译
+[^1]:钱钟书,论《林纾的翻译》
+[^2]:见七缀集里《林纾的翻译》和《汉译第一首英语诗人生颂及有关二三事》
+
 
 
 
