--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -19,7 +19,7 @@ slug: 翻译
 
 惊闻念奴娇，作者是昆仑。
 
-之后还有四句，未免责人过甚，就不录了。翻译不是易事，但犯下如此低级的错误，就绝不是能力的问题了。想起鲁迅二心集里面提到他跟梁实秋等人关于翻译的论战，那是在讨论什么是硬译死译，，译文是要信还是要达，也看到他跟瞿秋白关于翻译毁灭的通信，讲他如何反复对照日译本跟德译本来矫正翻译，瞿秋白如何对于一个字的内涵也反复琢磨（这次通信，让我了解了一个锋芒毕露，跟多余的话里面不一样的瞿秋白，惊而喜，这也是希望有机会能够一聊的），如此认真负责，和现今两相比较，不禁感叹，难道真是人心不古了吗？
+之后还有四句，未免责人过甚，就不录了。翻译不是易事，但犯下如此低级的错误，就不是能力的问题了，完全在于是否走心。想起鲁迅二心集里面提到他跟梁实秋等人关于翻译的论战，那是在讨论什么是硬译死译，，译文是要信还是要达，也看到他跟瞿秋白关于翻译毁灭的通信，讲他如何反复对照日译本跟德译本来矫正翻译，瞿秋白如何对于一个字的内涵也反复琢磨（这次通信，让我了解了一个锋芒毕露，跟多余的话里面不一样的瞿秋白，惊而喜，这也是希望有机会能够一聊的），如此认真负责，和现今两相比较，不禁感叹，难道真是人心不古了吗？
 
 鲁迅还提到过翻译对于革新中文词语，语法的功用，哪怕是译一篇小说，想到的也是对中国语文的影响，什么是爱国，爱自己的文化，什么是智识分子的担当，我想没有比这个更好的例子了。其实我们现在的汉语，倒有很多来源于翻译引入的词句和为了译得通畅而创造的新语法，只是其中很多大家已经很熟悉，而今天的翻译，说不定就是为以后的语言种下果子，是好果还是恶果，不可不察啊。
 
