--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -15,9 +15,7 @@ slug: 翻译
 
 先是听说了[门修斯](http://baike.baidu.com/link?url=h-qiETqPLqOz2GNH-o41iPiLuPNvb_fULS74PH-SUO6oYgQjBEtrxMz4QC1-r9pWb6d1bbUXfZ99b2PlQJlp08dnTlBAGO7_wZuWQZGnMZqp8TNm3lCvnng1sGQG_EI9)的故事，我们古代的大哲去了趟外国，回来就名姓全变了，他若地下有知，估计得说“唯见一学棍，未见译者也”。之后是华丽的[常凯申](http://baike.baidu.com/item/%E5%B8%B8%E5%87%AF%E7%94%B3)+[昆仑](www.chinanews.com/cul/2012/01-11/3598042.shtml)二连弹，更让我猝不及防，亮瞎了好眼。蒋，毛二公都不是好惹的，幸而他们都看不到了。当时觉得这几个关键词都还押韵，于是有了下边几句：
 
-才见门修斯，又遇常凯申，
-
-惊闻念奴娇，作者是昆仑。
+> 才见门修斯，又遇常凯申，惊闻念奴娇，作者是昆仑。
 
 之后还有四句，未免责人过甚，就不录了。翻译不是易事，但犯下如此低级的错误，就不是能力的问题了，完全在于是否走心。想起鲁迅二心集里面提到他跟梁实秋等人关于翻译的论战，那是在讨论什么是硬译死译，译文是要信还是要达，虽然双方各持己见，但能感觉到都是为了满足自己文学上的审美，虽然后来也加入了阶级性之类的争论，但作为文人，这种讨论的精神和严谨的态度还是很值得敬佩的。也看到他跟瞿秋白关于翻译毁灭的通信，讲他如何反复对照日译本跟德译本来矫正翻译，瞿秋白如何对于一个字的内涵也反复琢磨（这次通信，让我了解了一个锋芒毕露，跟多余的话里面不一样的瞿秋白，惊而喜，这也是希望有机会能够一聊的），如此认真负责，和现今两相比较，不禁感叹，难道真是人心不古了吗？
 
