--- a/content/cn/2017-03-01-翻译.md
+++ b/content/cn/2017-03-01-翻译.md
@@ -9,9 +9,9 @@ slug: 翻译
 
 读完此书，除了冯先生的知识渊博，行文举重若轻之外，我特别感叹其弟子涂有光先生的翻译。之前就知道这本书原书为英文，中文版是根据英文版译的，所以开读时略微有点担心“译者替原作者拒绝了读者”[^1]，但百页读来，丝毫没有普通书译本的生硬之感，时常叹其语言的流畅优美，仿佛冯先生就在眼前，将中国哲学思想的发展历史娓娓道来，时常生出试图用自己的话复述文意，与译者一较短长的心思。涂先生是冯先生的高足，自然对这本书的内容和冯先生说话语气等都很熟悉，译后更是得到冯先生亲自审定，这样得天独厚的译本用来跟普通译作相比，是不公平的，但是竟好至如此，实在是意外之喜。
 
-这让我想起了大学的时候，为了考研，买了本非常经典的英文生物化学教材的翻译本，是由复旦大学一位德高望重的老师领衔翻译的。想在回想起来，我复习考研大概有三分之二的时间用来跟这本书搏斗了，并且惨败。我确信我认识书里所有的汉字，但是一旦他们连在一起，我看起来就觉得陌生了，这种感觉，在刚来日本念书时，看到竖版排印，从右到左念的书时也有过。可惜竖版的书看个基本就习惯了，但那本教材一直到最后我都没有能适应过来，什么时候看，都跟听一个失语很久的人在讲一个冗长的故事似的。
+这让我想起了大学的时候，为了考研，买了本非常经典的英文生物化学教材的翻译本，是由复旦大学一位德高望重的老师领衔翻译的。想在回想起来，我复习考研大概有三分之二的时间用来跟这本书搏斗了，并且惨败。我确信我认识书里所有的汉字，但是一旦他们连在一起，我看起来就觉得陌生了，这种感觉，在刚来日本念书时，看到竖版排印，从右到左念的书时也有过。可惜竖版的书看个几本就习惯了，但那本教材一直到最后我都没有能适应过来，什么时候看，都跟听一个失语很久的人在讲一个冗长的故事似的。
 
-平心而论，这本书不算是太坏，如果对生物化学知识有所了解，把它当作参考书，不时查询倒也不错，只是同时要跟难懂的生化知识和不通的译文作战，当年的我实在是力不能至。这是我第一次意识到好的翻译对于介绍国外的书本是如此地重要。之前看过很多英，法，俄，日，西班牙等作家的小说，散文，估计是我比较幸运，遇到的译者都是相当认真，负责的，虽然不知道译文跟原文相比如何，但作为读者，我通过他们为媒介，也感受到了原作者希望带给我的喜怒哀乐，并未被其文字的佶屈聱牙所累，所以一直觉得把书译通了是理所当然的，而没有意识到译者们在这背后的艰辛付出，我愿意向他们致上我迟来的敬意。之后又遇到很多让我啼笑皆非的翻译，学术交流上，生活里都有，于是开始特别的留心身边的翻译有关的事情。
+平心而论，这本书不算是太坏，如果对生物化学知识有所了解，把它当作参考书，不时查询倒也不错，只是同时要跟难懂的生化知识和不通的译文作战，当年的我实在是力不能至。这是我第一次意识到好的翻译对于介绍国外的书本是如此地重要。之前看过很多英，法，俄，日，西班牙等作家的小说，散文估计是我比较幸运，遇到的译者都是相当认真，负责的。虽然不知道译文跟原文相比如何，但作为读者，我通过他们为媒介，也感受到了原作者希望带给我的喜怒哀乐，并未被其文字的佶屈聱牙所累，所以一直觉得把书译通了是理所当然的，而没有意识到译者们在这背后的艰辛付出，我愿意向他们致上我迟来的敬意。之后又遇到很多让我啼笑皆非的翻译，学术交流上，生活里都有，于是开始特别的留心身边的翻译有关的事情。
 
 先是听说了[门修斯](http://baike.baidu.com/link?url=h-qiETqPLqOz2GNH-o41iPiLuPNvb_fULS74PH-SUO6oYgQjBEtrxMz4QC1-r9pWb6d1bbUXfZ99b2PlQJlp08dnTlBAGO7_wZuWQZGnMZqp8TNm3lCvnng1sGQG_EI9)的故事，我们古代的大哲去了趟外国，回来就名姓全变了，他若地下有知，估计得说“唯见一学棍，未见译者也”。之后是华丽的[常凯申](http://baike.baidu.com/item/%E5%B8%B8%E5%87%AF%E7%94%B3)+[昆仑](www.chinanews.com/cul/2012/01-11/3598042.shtml)二连弹，更让我猝不及防，亮瞎了好眼。蒋，毛二公都不是好惹的，幸而他们都看不到了。当时觉得这几个关键词都还押韵，于是有了下边几句：
 
