--- a/content/cn/2017-03-04-SuXin.md
+++ b/content/cn/2017-03-04-SuXin.md
@@ -34,8 +34,6 @@ slug: SuXin
 
 辛弃疾
 
-临江仙
-
 泌园春（将止酒）
 
 > 杯汝来前！老子今朝，点检形骸。甚长年抱渴，咽如焦釜；于今喜睡，气似奔雷。汝说“刘伶，古今达者，醉后何妨死便埋”。浑如此，叹汝于知己，真少恩哉！
@@ -43,7 +41,7 @@ slug: SuXin
 
 > 更凭歌舞为媒。算合作人间鸩毒猜。况怨无小大，生于所爱；物无美恶，过则为灾。与汝成言，勿留亟退，吾力犹能肆汝杯。杯再拜，道“麾之即去，招则须来。”
 
-真有点韩愈《送穷文》的意思。
+真有点韩愈《送穷文》的意思。“叹汝于知己，真少恩哉”，这一句真是道尽了酒道三味啊。
 
 另外一首西江月也很有意思。
 
