--- a/content/cn/2017-03-23-LaoShe.md
+++ b/content/cn/2017-03-23-LaoShe.md
@@ -18,7 +18,7 @@ slug: LaoShe
 > 且莫贪眠减却狂，春宵月色不平常！碧桃几树开蝴蝶，紫燕联肩梦海棠。花比诗多怜夜短，柳如人瘦为情长。年来潦倒漂萍似，惯与东风道暖凉。
 
 
-老舍的文字能直接进到我的心里，这里说的不仅仅是这几首诗。还记得有一段时间心里一直能默诵他的几篇文章，《无题》，《母亲》等，字字刻骨，句句铭心，我觉得写那些文字的，才是真正的老舍，而不是那个写《当幽默变成油抹》的作家。
+老舍的文字能直接进到我的心里，这里说的不仅仅是这几首诗。还记得有一段时间心里一直能默诵他的几篇文章，《无题》，《我的母亲》等，字字刻骨，句句铭心，我觉得写那些文字的，才是真正的老舍，而不是那个写《当幽默变成油抹》的作家。
 
 
 
