--- a/content/cn/2017-03-25-Evolution-1.md
+++ b/content/cn/2017-03-25-Evolution-1.md
@@ -4,9 +4,9 @@ author: 张列弛
 date: '2017-03-25'
 slug: Evolution-1
 ---
-在北京上学的时候，有一次在学校食堂遇到了来传教的基督教教士，一个是日本人，据说曾经是一个高中生物教师，另外一个是在北京一个外企工作的白领。他们都能说很流利的英文，谈吐也很优雅，短暂的自我介绍后，他们从容地跟我介绍起我们人类的“罪”来，“只有信仰了上帝，才能逃脱即将来临的“惩罚””，他们如是说。这个“罪”和“惩罚”上的引号是我自己加的，但是我相信在他们说的时候，他们是很认真的。
+在北京上学的时候，有一次在学校食堂遇到了来传教的基督教教士，一个是日本人，据说曾经是一个高中生物教师，另外一个是在北京一个外企工作的白领。他们都能说很流利的英文，谈吐也很优雅，短暂的自我介绍后，他们从容地跟我介绍起我们人类的“罪”来，“只有信仰了上帝，才能逃脱即将来临的“惩罚””，他们如是说。这个“罪”和“惩罚”上的引号是我自己加的，我相信在他们说的时候，是很认真的。
 
-我对于这种言论向来不以为然，由于专业是生物，而且又一直对进化比较感兴趣，所以我就把话题转到了用上帝的理论如何解释进化上，希望能在讨论中对他们的一些观点进行反驳。事实证明我是如此地too young, too simple, and sometimes native，岂止是愚蠢，简直就是愚蠢，因为他们对生物进化的理论根本就不屑于讨论，在提了几个关于化石记录断层的疑问后，大度地说：就算进化论是有道理的吧，但是生命地起源呢？如何解释无机体到有机体变化这个飞跃？我沉默了，我发现我根本就没有深入考虑过这个问题。我听着他们用自己的理论计算出一个生命通过随机过程起源于无机物的概率，依稀记得好像是一个数的负156次幂，也就是基本不可能了-“所以一切都是上帝创造的”，他们如是说。
+我对于这种言论向来不以为然，由于专业是生物，而且又一直对进化比较感兴趣，所以我就把话题转到了用上帝的理论如何解释进化上，希望能在讨论中对他们的一些观点进行反驳。事实证明我是如此地too young, too simple, and sometimes native，岂止是愚蠢，简直就是愚蠢，因为他们对生物进化的理论根本就不屑于讨论。在提了几个关于化石记录断层的疑问后，他们大度地说：就算进化论是有道理的吧，但是生命地起源呢？如何解释无机体到有机体变化这个飞跃？我沉默了，我发现我根本就没有深入考虑过这个问题。我听着他们用自己的理论计算出一个生命通过随机过程起源于无机物的概率，依稀记得好像是一个数的负156次幂，也就是基本不可能了-“所以一切都是上帝创造的”，他们如是说。
 
 回到宿舍后，我感到自己心里受到了极大的压迫。因为如果有一个凌驾于一切人的“存在”存在，一切人都是在“他”的掌控之中，那人还有什么意义呢？我却偏偏不能断然地拒绝这种可能性，因为我缺少我所习惯的数据来反驳他们的观点。突然，人的一切都显得如此地可悲。我想，可能是由于我对于科学在生命的起源上的进展了解的太少了，所以才在他们的观点面前显得如此地无力，好好学习吧，以后应该会找到更为强大的证据来反驳他们的。但是由于那次讨论，让我觉得人的渺小，局限和可悲，这种心态在之后很长时间里影响了我，让我常常思考，如此关于上帝的一切是真的，那么人类生存的意义到底是什么？这个问题可能让信仰上帝的人不能理解。在我，这种上帝存在的可能性让我有了深深的“人为刀俎我为鱼肉”的感觉，让我看轻了人的价值。这种感觉一直到看了忠犬八公这个电影后，才有了彻底地改变，因为那个电影让我体会到了一种可以突破人的局限性，而永恒存在的东西，让人可以不管在“上帝”还是别的什么面前都能高昂起头的力量。
 
