--- a/content/cn/2017-02-26-second.md
+++ b/content/cn/2017-02-26-second.md
@@ -16,13 +16,7 @@ tags:
 
 ### 无题[^1]
 
-已失寸心藏尺素，何求神鸦伴社鼓，
-
-人随流水行渐远，叶畏潇风落欲枯。
-
-夜闻心碎女儿情，昼究重生苔藓[^2]命，
-
-由来事事从心役，无嗟时时不了情。
+>已失寸心藏尺素，何求神鸦伴社鼓，人随流水行渐远，叶畏潇风落欲枯。夜闻心碎女儿情，昼究重生苔藓[^2]命，由来事事从心役，无嗟时时不了情。
 
 [^1]:看过很多无题诗，一开始觉得无题为名，很别致，但看多了就烦了，不是因为审美疲劳，主要是因为多数“无题”倒确像是因为作者根本不知道自己在写什么，自然只好无题了。其实这诗一开始是有题的，只是后来故事没了，也就无题了。
 
