--- a/content/cn/2017-04-01-Evolution-2.md
+++ b/content/cn/2017-04-01-Evolution-2.md
@@ -5,9 +5,9 @@ date: '2017-04-01'
 slug: Evolution-2
 ---
 
-说起进化，现在可谓是家喻户晓（不错），妇孺皆知（这个话在现代社会可能不再适合用来说明一个事物的流行程度了）。但是，我觉得有时这种流行对科学来说不一定是好事，因为在这种情况下，人们容易丧失一些必要的思考而盲目的接受一些观念。当然，这并不意味着相关观念是对的或者是错的，仅仅是说，人们在接受的时候，其实并一定不理解它对或者错在哪里。
+说起进化，现在可谓是家喻户晓（不错），妇孺皆知（这个话在现代社会可能不再适合用来说明一个事物的流行程度了）。但是，我觉得有时这种流行对理解进化来说不一定是好事，因为在这种情况下，人们容易丧失一些必要的思考而盲目的接受一些观念。当然，这并不意味着相关观念是对的或者是错的，仅仅是说，人们在接受的时候，其实并一定不理解它对或者错在哪里。
 
-就进化论来说，其基本观点是，生物都在随着时间的流逝而变化着。对于这种变化，大家想了好些个不同的机制，在深入讨论之前，问题们先来了:
+就进化论来说，其基本观点是，生物都在随着时间的流逝而变化着。为了解释这种变化是怎么发生的，大家想了好些个不同的机制，在深入讨论之前，问题们先来了:
 
 1. 生物确实都在变化吗（这第一个问题就是不准备交朋友的节奏啊）？
 2. 进化里面的“进”字，按照通常理解有提高，进步的意思，那在时间中变化的生物确实都在提高进步吗？
@@ -18,17 +18,17 @@ slug: Evolution-2
 
 深究下去的话，问题跟坑同样多，暂时就列这几个吧。如果您思考以后，觉得对以上问题的答案了然于胸，剩下的可以不看了:)。
 
-现在,进化论是如此彻底地变革了人们的观念，以至于很少有人意识到在进化理论提出来的初期，它是个多么“毁”三观的理论，也很少有人会思考进化论关心的问题的基础，即生物确实在变化吗，证据是什么，怎么得来的？把一切当成理所当然比思考往往容易些。
+现在,进化论是如此彻底地变革了人们的观念，以至于很少有人意识到在进化理论提出来的初期，它是个多么“毁”三观的理论，也很少有人会思考进化论的存在基础，即生物确实在变化吗，证据是什么，怎么得来的？把一切当成理所当然比思考往往容易些。
 
-一个人一生不过百年，这百年之内，若不是做转基因动植物研究的，或是遇到核灾变的人，应该谁也没有看到过任何能反应生物会变化的蛛丝马迹，猫就是猫，狗就是狗，年年代代都如此。把时间幅度放长一点，就从人类有文明开始算，应该不到一万年，这一万年里也少有生物进化的痕迹，因为一万年对于进化需要的时间尺度来说，还是太短了，就算有人从远古活到现在，让她/他把一万年前的和现在的老虎做个比较，估计看不出来什么差异。这里有一个例外需要指出来，那就是人工驯化动植物在这一万年里变化还是比较大的，这里涉及到人工选择。人类的老祖先们在生活生产的过程中，通过筛选自己需要的动植物形状，促进了它们的跟野生的动植物差异加大，成为人们希望的样子。多数时候这种驯化是下意识的，人们知道怎么做可以，但是不知道为什么可以，甚至从不考虑为什么可以。在自然选择理论提出来时候，达尔文喜欢用人工选择来打比方，好让人们理解自然选择，但是其实这两者之间还是有比较大的差异的，就像大家现在能在某种程度上理解和接受人工智能，但如果你拿人工智能打比方，让他/她相信人类的智能是由某种高等生命设计出来的，那多半是不好使的。
+一个人一生不过百年，这百年之内，若不是做转基因动植物研究的，或是遇到核灾变的人，应该谁也没有看到过任何能反应生物会变化的蛛丝马迹，猫就是猫，狗就是狗，年年代代都如此。把时间幅度放长一点，就从人类有文明开始算，应该不到一万年，这一万年里也少有生物进化了多少?一万年对于进化需要的时间尺度来说，还是太短了，就算有人从远古活到现在，让她/他把一万年前的和现在的老虎做个比较，估计也看不出来什么差异。这里有一个例外需要指出来，那就是人工驯化的动植物在这一万年里变化还是比较大的，这里涉及到人工选择。人类的老祖先们在生活生产的过程中，通过筛选自己需要的动植物形状，促进它们跟野生动植物的差异加大，成为人们希望的样子。多数时候这种驯化是下意识的，人们知道怎么做可以，但是不知道为什么可以，甚至从不考虑为什么可以。在自然选择理论提出来时候，达尔文喜欢用人工选择来打比方，好让人们理解自然选择，但是其实这两者之间还是有比较大的差异的，就像大家现在能在某种程度上理解和接受人工智能，但如果你拿人工智能打比方，让他/她相信人类的智能是由某种高等生命设计出来的，那多半是不好使的。
 
-扯远了，拉回来。对于进化来说，一万年都嫌太短，所以我们习惯的其实是一个不变的世界（就身边的动植物来说），除了玩宠物小精灵的时候，你或者你身边的小伙伴们也不会去问啥啥进化了吗？（严格的说，就算对于宠物小精灵里面的那些妖怪来说，所谓的进化应该叫发育才对，因为那是在个体水平发生的变化。）所以，提出生命会随着时间改变（极长极长的时间）其实是很反常识的---至少在没有进化观念的人的心里。与此对应，如果按照有文字记载的人类近三千年的历史来看，大概有两千七百年人们认为生物是不变的，三百年前开始有人提出生物是会改变，而近一百五十年来，这个理论才逐渐被发扬光大，从而被大众广泛接受---不过，听说在美国和欧洲，现在都还有一些人反对学校开设进化论课程，它们还是文明发展的前沿地带啊。
+扯远了，拉回来。对于进化来说，一万年都嫌太短，所以我们习惯的其实是一个不变的世界（就身边的动植物来说），除了玩宠物小精灵的时候，你或者你身边的小伙伴们应该不会去问啥啥进化了吗？（严格的说，就算是宠物小精灵里面的那些妖怪，所谓的进化应该叫发育才对，因为那是在个体水平发生的变化。）所以，提出生物会随着时间改变（极长极长的时间）其实是反常识的---至少在没有进化观念的人的心里。与此对应，如果按照有文字记载的人类近三千年的历史来看，大概有两千七百年人们认为生物是不变的，三百年前开始有人提出生物是会改变（指比较有影响的提倡，不是某人突发的奇想），而近一百五十年来，这个理论才逐渐被发扬光大，从而被广泛接受---不过，听说在美国和欧洲，现在都还有一些人反对学校开设进化论课程，它们还是文明发展的前沿地带啊。
 
-进化论涉及到我们对生于斯长于斯的这个世界的看法。如果我们暂时忘掉属于现代的知识，设想一下，一个古代的人看到身边的世界，会怎么想呢？我自己脑补一下，大概就是这个跟那个不一样，这个好吃，那个好看，那个那个好可怕好可怕（估计看到大蛇了）。我们中国古代有部大辞典叫《尔雅》，里面释这个，释那个，解释了当时人们常接触到的很多东西，其中包括了很多动植物。这算是我国比较早的一个把动植物分类来记录的书了。这样的分类其实是对于当时人们看到的动植物的一个快照，是按一种静态的观点在看待它们，虽然这里面没什么进化的思想，但是把生物分门别类的梳理出来，并具有了初步的阶层结构，比如，按照有没有生命力，可以简单的排一个无机物，有机物，简单的动物（没脊椎的）到复杂的动物（有脊椎的）的序列。这是《尔雅》对当时人们对生物看法的一个出色的总结。当然，《尔雅》不是专门用来做动植物分类的，里面还释了些别的，如天，地等，跟这里要讨论的无关，就先不管它们了。把生物按一定标准排成一个序列是挺厉害的一个进步，咱们的荀子同志言简意赅的总结为：
+进化论涉及到我们对生于斯长于斯的这个世界的看法。如果我们暂时忘掉属于现代的知识，设想一下，一个古代的人看到身边的世界，会怎么想呢？我自己脑补一下，大概就是这个跟那个不一样，这个好吃，那个好看，那个那个好可怕好可怕（估计看到大蛇了）。我们中国古代有部大辞典叫《尔雅》，里面释这个，释那个，记录当时人们常接触到的很多东西，其中包括了很多动植物。这算是我国比较早的一个把动植物按类别来记录的书了。这种分类是对于当时人们看到的动植物的一个快照，是按一种静态的观点来看待它们。虽然这里面没什么进化的思想，但是把生物分门别类的梳理出来，并具有了初步的阶层结构---比如，按照有没有生命力，可以简单的排一个无机物，有机物，简单的动物（没脊椎的）到复杂的动物（有脊椎的）的序列---这是很进步的事件。当然，《尔雅》不是专门用来做动植物分类的，里面还释了些别的，如天，地等，跟这里要讨论的无关，就先不管它们了。把生物按一定标准排成一个序列是挺厉害的一个进步，咱们的荀子同志言简意赅的总结为：
 
 > 水火有气而无生，草木有生而无知，禽兽有知而无义，人有气，有生，有知，亦且有义，故最为天下之贵。
 
-无独有偶，在地球西边的亚里斯多德也有这么个排序，将看到的自然界里面的东西从无机物，到植物，到动物这样也排了个链条出来，从而形成一个自下而上的等级，上帝在这个等级的顶端。可惜，这个链条也是静态的，没有孕育出进化的想法。对此我很感到诧异，因为亚里斯多德还有个运动的四因说（这里的运动泛指一切变化），他认为世界万物是由一个最低级的纯物质到最高层的存形式形成的链条，下层的物质由于上层的形式的吸引而向上变化，上层的形式对于上上层来说又是物质，进而也被吸引着向上运动，从而构成一个生机勃勃的世界，天天向上的世界。根据这个运动理论，加上生物的等级结构，我以为亚里斯多德可能会提出生物在变化的观点，可惜好像生物在时间里的运动当时没有被老亚考虑到这个链条里，所以他没有提出进化的观点。据说，这是跟他的老师柏拉图有关。柏拉图有个理念论，认为我们看到的每个事物，都（在天上）有一个对应的完美的理念，所以，我们有万物组成的世界对应着一个有众理念组成的世界，那个世界是完美无缺的，所以不存在也不需要任何变化。我们这个世界是对于那个完美的理念世界**不完美**的模仿，所以也不会变。这里的“不完美”变黑是有道理的，有一次在上生物进化课的时候，长谷川真理子老师提到柏拉图的这个想法对进化论发展有重要的意义，因为柏拉图注意到了物种内部的差异，而这是多数进化理论的基础。一般来说，物种跟物种间的差异是明显的，比如老虎跟小兔子相比，老虎明显要强的多，搁一块儿的话，兔子分分钟就没了，但是物种内部的差异却不容易引起重视，比如这只老虎跟那只老虎之间的区别是什么，可能小兔子并不在乎。要说清楚柏拉图的观点，需要举一个例子。在柏拉图看来，我们这个世界上的所有的马都是对天上那个完美的马的理念的模仿，而这种模仿是有缺陷的，地上的各匹马有缺陷的地方都不一样，所以我们地上的马和马之间是不一样的，形成了种内差异。我可以把这个说法加以引申，用现在生物学知识来穿凿附会一下。说，有一个完美无缺的马的基因组存在（理念对应基因组），所有的现实中的马的基因组是对这个完美的马基因组的模仿，但是模仿是有不准确的地方的（缺陷对应突变），由于马和马之前不准确的地方不一样（突变位点不同），所以马和马之间是有区别的。哈哈，加上达尔文的自然选择说，孟德尔和摩尔根的遗传定律和木村资生的中性选择，一锅新鲜的进化大餐就该上桌了。可惜事情没有这么顺利，柏拉图的这个世界，也是静止的（对于变化来说），他的完美主义太彻底了。
+无独有偶，在地球西边的亚里斯多德也有这么个排序，将看到的自然界里面的东西从无机物，到植物，到动物这样也排了个链条出来，从而形成一个自下而上的等级，上帝在这个等级的顶端。可惜，这个链条也是静态的，没有孕育出进化的想法。对此我很感到诧异，因为亚里斯多德还有个运动的四因说（这里的运动泛指一切变化），他认为世界万物是由一个最低级的纯物质到最高层的存形式形成的链条，下层的物质由于上层的形式的吸引而向上变化，上层的形式对于上上层来说又是物质，进而也被吸引着向上运动，从而构成一个生机勃勃，天天向上的世界。根据这个运动理论，加上生物的等级结构，我以为亚里斯多德可能会提出生物在变化的观点，可惜生物在时间里的运动当时没有被老亚考虑到这个链条里，所以他没有提出进化的观点。据说，这是跟他的老师柏拉图有关。柏拉图有个理念论，认为我们看到的每个事物，都（在天上）有一个对应的完美的理念。由此，我们由万物组成的世界对应着一个由众理念组成的世界，那个世界是完美无缺的，所以不存在也不需要任何变化。我们这个世界是对于那个完美的理念世界**不完美**的模仿，所以也不会变。这里的“不完美”变黑是有道理的，有一次在上生物进化课的时候，长谷川真理子老师提到柏拉图的这个想法对进化论发展有重要的意义，因为柏拉图注意到了物种内部的差异，而这是很多进化理论的基础。一般来说，物种跟物种间的差异是明显的，比如老虎跟小兔子相比，老虎明显要强的多，搁一块儿的话，兔子分分钟就没了，但是物种内部的差异却不容易引起重视，比如这只老虎跟那只老虎之间的区别是什么，可能小兔子并不在乎。要说清楚柏拉图的观点，需要举一个例子。在柏拉图看来，我们这个世界上的所有的马都是对天上那个完美的马的理念的模仿，而这种模仿是有偶然缺陷的，地上的各匹马有缺陷的地方都不一样，所以我们地上的马和马之间是不一样的，形成了种内差异。我可以把这个说法加以引申，用现在生物学知识来穿凿附会一下。说，有一个完美无缺的马的基因组存在（理念对应基因组），所有的现实中的马的基因组是对这个完美的马基因组的模仿，但是模仿是有不准确的地方的（缺陷对应突变），由于马和马之前不准确的地方不一样（突变位点不同），所以马和马之间是有区别的。哈哈，加上达尔文的自然选择说，孟德尔和摩尔根的遗传定律和木村资生的中性选择，一锅新鲜的进化大餐就该上桌了。可惜事情没有这么顺利，柏拉图的这个世界，也是静止的（对于变化来说），他的完美主义太彻底了。
 
 这种种内差异性在我国古代也曾有过体现，比如张载就写道：
 
