--- a/content/cn/2017-04-01-Evolution-2.md
+++ b/content/cn/2017-04-01-Evolution-2.md
@@ -40,9 +40,9 @@ slug: Evolution-2
 
 接下来说柏拉图们之后发生的事情了，我在标志性的人事后边加了我们中国相应的时期，以便理解。
 
-在柏拉图，亚里斯多德（我们大概战国时期）等大咖陨落后，咱们地球西边的小伙伴们也渐渐迎来了思想发展的低迷时期，继而是一个较长的在思想多样性和科学发展上都比较黑暗的时期（公元元年到中世纪，对应我们汉朝中期到明末），因为随着基督教建立并慢慢变强大了，和基督教义不符合的东西开始变得不受欢迎。到公元四世纪，基督教被罗马帝国定位了国教（我们中国到了两晋了），于是思想领域的统一运动就更厉害了（有时候，我觉得这个事件跟我们中国的独尊儒术有点像，不过孔老夫子的门徒们好像要比同时期的基督教徒们更宽容些，别人意见跟自己不对，也就骂几句“无君无父，是禽兽也”，不会把人放火上烧）。基督教采用了柏拉图/亚里斯多德的很多理论。他们认为上帝创造了万物，这些造物主的作品从被造出来就是长这样的（如果你说上帝创造的东西会变化，这会有大问题的，比如：如果你说上帝创造的东西会变好，那你是说上帝现在创造的东西有缺陷吗？大胆。如果你说上帝创造的东西会变坏，那你是说上帝的质量控制不过关吗？大胆。）这个世界由一个从地狱到上帝的序列组成，其秩序永不会变。基督教的影响之深，长达千年，到了十七八世纪，大神林奈用双名法来为当时已知的动植物命名的时候，其实本心还是想着往这个造物主创造的等级链条上填空呢。
+在柏拉图，亚里斯多德（我们大概战国时期）等大咖陨落后，咱们地球西边的小伙伴们也渐渐迎来了思想发展的低迷时期，继而是一个较长的在思想多样性和科学发展上都比较黑暗的时期（公元元年到中世纪，对应我们汉朝中期到明末），因为随着基督教建立并慢慢变强大了，和基督教义不符合的东西开始变得不受欢迎。到公元四世纪，基督教被罗马帝国定位了国教（我们中国到了两晋了），于是思想领域的统一运动就更厉害了（有时候，我觉得这个事件跟我们中国的独尊儒术有点像，不过孔老夫子的门徒们好像要比同时期的基督教徒们更宽容些，别人意见跟自己不对，也就骂几句“无君无父，是禽兽也”，不会把人放火上烧）。基督教采用了柏拉图/亚里斯多德的很多理论。他们认为上帝创造了万物，这些造物主的作品从被造出来就长这样，万代不变，除非上帝看你不爽，给你来此大洪水，洗牌重新造一次（如果你说上帝创造的东西会变化，这会有大问题的，比如：如果你说上帝创造的东西会变好，那你是说上帝现在创造的东西有缺陷吗？大胆。如果你说上帝创造的东西会变坏，那你是说上帝的质量控制不过关吗？大胆。），这个世界由一个从地狱到上帝的序列组成，其秩序也永不会变。基督教的影响之深远，长达千年，到了十七八世纪，大神林奈用双名法来为当时已知的动植物命名的时候，其实本心还是想着往这个造物主创造的等级链条上填空呢。
 
-总之，在人的思想发展漫长的历史中，不管是从人们的日常经验来看，还是从人们普遍信奉的宗教理论来看，生物都是不会变的。既没有经验观察，有没有理论基础，进化论能发展起来才是怪事呢。好在，时间到了十七世纪左右了，事情开始变得热闹起来了（我们中国来到了明清之际了）。
+总之，在人的思想发展漫长的历史中，不管是从人们的日常经验来看，还是从人们普遍信奉的宗教理论来看，生物都是不会变的。在这种情况下，既没有经验观察，有没有理论基础，进化论能发展起来才是怪事呢。好在，时间到了十七世纪左右了，事情开始变得热闹起来了（我们中国来到了明清之际了）。
 
 接下来的百来年，就写在进化之一点点-3里吧。
 
