--- a/content/cn/2017-04-08-Donate.md
+++ b/content/cn/2017-04-08-Donate.md
@@ -25,7 +25,7 @@ tags: []
 
 看来最接近“打赏”里面“赏”字的用法的应该是第一种，也正是我不太喜欢那种。别人通过自己的劳动，本来就应该获取的利益，怎么就变成“赏”了？百度百科里面所解释的“打赏”应该是引申出来应有的意思，而不是这两个字原有的意思。于是我就奇怪了，汉字这么博大精深，为什么非得用这两个字呢？
 
-在喜马拉雅上有个系列节目叫《科学声音》，我很喜欢，知识量和趣味性都爆表那种（从《物种起源》前几期判断出来的）。听这个节目的时候，我都能感觉到，为了收集汇总如此多的资料来讲给我们听，主播们需要付出多大的努力。我有时都有点担心，怕这几个主播哪天突然觉得太累，不干了怎么办，所以很想表达我对他们的支持和感谢。但是第一笔“支持”迟迟没有打出去，原因就在“打赏”两个字---我还是突破不了这个心结，在点击这个按钮时，我心里满是惭愧，觉得这样对主播太不尊重了。在一些英文网页上，或者使用一些免费软件的时候，有时会弹出小窗口，问是否愿意在经济上给予支持的，一般情况下，显示的动词是“donate”，我觉得这个词就很好，曾经想建议喜马拉雅把“打赏”换成“捐赠”，但一来发现这个词不是那么的上口，另外，捐赠也不是多数国民所习惯的，估计真改成“捐赠”，喜马拉雅主播们就得饿肚子了。
+在喜马拉雅上有个系列节目叫《科学声音》，我很喜欢，知识量和趣味性都爆表那种（从《物种起源》前几期判断出来的）。听这个节目的时候，我都能感觉到，为了收集汇总如此多的资料来讲给我们听，主播们需要付出多大的努力。我有时都有点担心，怕这几个主播哪天突然觉得太累，不干了怎么办，所以很想表达我对他们的支持和感谢。但是第一笔“支持”迟迟没有打出去，原因就在“打赏”两个字---我还是突破不了这个心结，在点击这个按钮时，我心里满是惭愧，觉得这样对主播太不尊重了。在一些英文网页上，或者使用一些免费软件的时候，有时会弹出小窗口，问是否愿意在经济上给予支持的，一般情况下，显示的动词是"donate"，我觉得这个词就很好，曾经想建议喜马拉雅把“打赏”换成“捐赠”，但一来发现这个词不是那么的上口，另外，捐赠也不是多数国民所习惯的，估计真改成“捐赠”，喜马拉雅主播们就得饿肚子了。
 
 纠结了半天，第一笔“打赏”还是送出去了，同时也隐隐觉得我有点"堕落"了。
 
