--- a/content/cn/2017-04-11-寻常.md
+++ b/content/cn/2017-04-11-寻常.md
@@ -15,9 +15,9 @@ slug: 寻常
 
 > 八尺为寻，十六尺为常。
 
-我那个去，“寻常”居然是个长度单位，看来读书少会时时有惊喜的。接着就轮到度娘出场了，看看这个长度单位怎么变成“寻常”的。在不完全取样下，大概有这么个印象，晋之前的“寻常”貌似常用为长度单位，也有引申为短小的意思，在我看到的例子里，还没有正大光明的用“寻常”为“普通”的。较早的一个把“寻常”当“普通”来用的例子是刘禹锡的诗《乌衣巷》，其中有一句“旧时王谢堂前燕，飞入寻常百姓家”。之后的宋，元，明，寻常地使用“寻常”就越来越普遍了。也有把“寻常”当经常，平时用的，大概也是唐朝前后的事。
+我那个去，“寻常”居然是个长度单位，看来读书少会时时有惊喜的。接着就轮到度娘出场了，看看这个长度单位怎么变成“寻常”的。在不完全取样下，大概有这么个印象，“寻常”在春秋战国时就有了，一直到晋，“寻常”貌似平常用法都为长度单位，有时也引申为短小，在我看到的例子里，唐朝前还没有正大光明的用“寻常”为“普通”的。较早的一个把“寻常”当“普通”来用的例子是唐刘禹锡的诗《乌衣巷》，其中有一句“旧时王谢堂前燕，飞入寻常百姓家”。之后的宋，元，明，寻常地使用“寻常”就越来越普遍了。也有把“寻常”当经常，平时用的，大概也是唐朝前后的事。
 
-考证功夫是很困难的，不是我辈随便百度一下就能胜任的，所以还得说一遍，以上只是基于极小样本的数据里得来的印象。
+考证功夫是很困难，不是我辈随便百度一下就能胜任的，所以还得说一遍，以上只是基于极小样本的数据里得来的印象。
 
 纳兰容若有首纪念妻子的词，道出了寻常之不寻常：
 
@@ -26,5 +26,5 @@ slug: 寻常
 
 年纪轻轻就有了这么深刻的感悟，不知受了多少思苦才能道出。
 
-我除了对生物进化感兴趣以外，也对语言的进化很感兴趣，有时候我们使用的字词还保留了古时候的意思，有的却已经“面目全非”了，看看它们是怎么一步步变过来了，其乐无穷。都不用搞基因组测序，来两本好字典加度娘（现在查中文的东西，我觉得度娘还是比谷歌好用些）就可以了。
+我除了对生物进化感兴趣以外，也对语言的进化很感兴趣，有时候我们使用的字词还保留了古时候的意思，有的却已经“面目全非”了，看看它们是怎么一步步变过来了，其乐无穷。看文字的演变都不用搞基因组测序，来两本好字典加度娘（现在查中文的东西，我觉得度娘还是比谷歌好用些）就可以了。
 
