--- a/content/cn/2017-04-08-Donate.md
+++ b/content/cn/2017-04-08-Donate.md
@@ -37,6 +37,10 @@ tags: []
 
 可能真是因为我对流行文化，包括流行语的接受太慢了吧，像“屌丝”一类的词刚出来的时候，我都适应了很长时间，好在，或者不好在，现在也不觉得使用这样的词有什么不好了，因为大家都用的是“应有”的意思，而不是这个词“原有”的意思。可能再过一段时间，我也会慢慢适应“打赏”吧。
 
+五月二十九日补记：
+
+今天听闻喜马拉雅已经将“打赏”改为了“赞助”，比我本文提到的“捐赠”更好，这是个很好的进步。
+
 
 
 [^1]: 有时越是自己没有付出过的人，越觉得别人应该高风亮节地义务劳动。免费得到的东西，往往不太珍惜，意识到自己需要付出一定的代价，可能更好些。
