--- a/content/cn/2017-05-29-Sensei.md
+++ b/content/cn/2017-05-29-Sensei.md
@@ -17,7 +17,7 @@ slug: Sensei
 
 直率的李白在给韩朝宗写的自荐信里说：
 
-> “白闻天下谈士相聚而言曰：“生不用万户侯，但愿一识韩荆州。”何令人之景慕，一至于此耶！岂不以有周公之风，躬吐握之事，使海内豪俊奔走而归之，一登龙门，则声誉十倍，所以龙盘凤逸之士，皆欲收名定价于君侯。”
+> 白闻天下谈士相聚而言曰：“生不用万户侯，但愿一识韩荆州。”何令人之景慕，一至于此耶！岂不以有周公之风，躬吐握之事，使海内豪俊奔走而归之，一登龙门，则声誉十倍，所以龙盘凤逸之士，皆欲收名定价于君侯。
 
 我想，现在电视上的各学员们，大约也是想在导师们那里“收名定价”吧。  
 
