modifications on words

--- a/content/cn/2017-05-29-Sensei.md
+++ b/content/cn/2017-05-29-Sensei.md
@@ -5,15 +5,15 @@ date: '2017-05-29'
 slug: Sensei
 ---
 
-一千多人年，有个叫韩愈的人，忧“师道之不复”，做《师说》以醒人。以今观古，韩愈可谓杞人忧天也。  
+一千多年前，有个叫韩愈的人，忧“师道之不复”，做《师说》以醒人。以今观古，韩愈可谓杞人忧天也。  
 
 在现在的中国，“师道”得到了前所未有的彰显。纳尼？你没有看到？你看到了普通教师在生活中下层纠结，看到了人人以当官为荣，有志者，不为师？你看到了......   
 
 等等，你看错地方了。不要看社会，打开电视，打开微博，受人尊敬的导师们来了。  
 
-中国人自古尊师重教，而于今为烈。什么“位卑则足羞，官盛则近谀”，在现在都不成其为问题，你只要有名或是会忽悠，一定有人奉你为导师。电视上，一群群想进入娱乐圈的青年才俊巴巴地看着台上的各位“大老师”，“小老师”，以求提携。微博上，各大Ｖ不辞辛苦，指点江山，忽悠百姓，一篇篇“感人肺腑”或“犀利入骨”的文章下，全是一心“求真求学”的人们满满的“赞”。
+中国人自古尊师重教，而于今为烈。什么“位卑则足羞，官盛则近谀”，在现在都不成其为问题，你只要有名或是会忽悠，一定有人奉你为导师。电视上，一群群想进入娱乐圈的青年才俊巴巴地看着台上的各位“大老师”，“小老师”，以求提携。微博上，各大Ｖ不辞辛苦，指点江山，忽悠百姓，一篇篇“感人肺腑”或“犀利入骨”的文章下，全是来自一心“求真”的人们满满的“赞”。
 
-我知道电视上的导师们有一些是实在有真才实学，真想提携后进的，比如我看过的少数节目里出现的刘欢。微博里也有一些想为青年指路的人。但，我可以不太客气地说，多数现行导师是功利和愚昧交织而成的。一旦有了广大信众，众多导师们便接踵而至，乘着这些功利和愚昧飘飘上天。
+我知道电视上的导师们有一些是实在有真才实学，真想提携后进的。微博里也有一些确实想为青年指路的人。但，我可以不太客气地说，多数现行导师是功利和愚昧交织而成的**品。一旦有了广大信众，众导师们便接踵而至，乘着这些功利和愚昧飘飘上天。
 
 直率的李白在给韩朝宗写的自荐信里说：
 
@@ -36,7 +36,8 @@ slug: Sensei
 
 > **又何须寻那挂着金字招牌的导师呢？不如寻朋友，联合起来，同向着似乎可以生存的方向走。你们所多的是生力，遇见深林，可以辟成平地的，遇见旷野，可以栽种树木的，遇见沙漠，可以开掘井泉的。问什么荆棘塞途的老路，寻什么乌烟瘴气的鸟导师！
 
-其实不管是想“收名定价”也好，还是想从一些先行者那里得到些经验或教训也好，都无可厚非，但我觉得还是放过“老师”，“导师”这些称谓，留一片净土给那些把科学和文化薪火相传给未来的人们吧。
+其实不管是想“收名定价”也好，还是想从一些先行者那里得到些经验或教训也好，抑或是自己实在没有什么主见，就像找个人来跟随也好，都无可厚非。但我觉得还是放过“老师”，“导师”这些称谓，留一片净土给那些把科学和文化薪火相传给未来的人们吧。
+
 
 
 
