--- a/content/cn/2017-05-29-Sensei.md
+++ b/content/cn/2017-05-29-Sensei.md
@@ -36,7 +36,7 @@ slug: Sensei
 
 > **又何须寻那挂着金字招牌的导师呢？不如寻朋友，联合起来，同向着似乎可以生存的方向走。你们所多的是生力，遇见深林，可以辟成平地的，遇见旷野，可以栽种树木的，遇见沙漠，可以开掘井泉的。问什么荆棘塞途的老路，寻什么乌烟瘴气的鸟导师！
 
-其实不管是想“收名定价”也好，还是想从一些先行者那里得到些经验或教训也好，抑或是自己实在没有什么主见，就像找个人来跟随也好，都无可厚非。但我觉得还是放过“老师”，“导师”这些称谓，留一片净土给那些把科学和文化薪火相传给未来的人们吧。
+其实不管是想“收名定价”也好，还是想从一些先行者那里得到些经验或教训也好，抑或是自己实在没有什么主见，就想找个人来跟随也好，都无可厚非。但我觉得还是放过“老师”，“导师”这些称谓，留一片净土给那些把科学和文化薪火相传给未来的人们吧。
 
 
 
