--- a/content/cn/2017-09-01-songs.md
+++ b/content/cn/2017-09-01-songs.md
@@ -95,7 +95,7 @@ tags: []
 
 在搜索这段歌词的时候，看到知乎上有人问，林夕的这首词到底达到了什么水准？这个问题让我乐了好一会儿。如果有人知道如何量化词的水准，请不要告诉我。  
 
-崔健是个怪才，我实在想不出来，他在那个年代是如何写出那些歌的。我听过崔健大部分歌，但是有两首要感谢谭维维，那就是《飞了》和《鱼鸟之恋》，若不是谭维维，我可能到不会接触到这两首歌。
+崔健是个怪才，我实在想不出来，他在那个年代是如何写出那些歌的。我听过崔健大部分歌，但有两首要感谢谭维维，那就是《飞了》和《鱼鸟之恋》，若不是谭维维，我可能到不会接触到这两首歌。
 
 九十年代出现了好多才华横溢的音乐人，比如张雨生，窦唯，张楚，如果他们的创作生命再长一点就好了。
 
