related to title

--- a/content/cn/2018-11-28-.md
+++ b/content/cn/2018-11-28-.md
@@ -30,7 +30,9 @@ tags: []
 
 我记得以前看过一个关于印度气泡人的新闻：有个印度人由于患有某种遗传疾病，浑身长满红色气泡状的东西，面目全非，极为恐怖（多年过去了，我现在想起那张气泡人照片还会满身鸡皮疙瘩），自己苦不堪言不说，这种病症还会遗传给自己的后代。隔着屏幕，我都能感受到患者的那种痛苦，如果基因编辑技术在时机成熟的时候被用于治疗这样的饱受遗传疾病困扰的人，让他们摆脱病痛，我会双手赞成此类生殖细胞或是受精卵的编辑。只是贺建奎等人做的，是高风险，低必要的事情，除了利欲熏心外，我实在想不出来还有什么别的原因。
 
-这个研究里基因被编辑的孩子是无辜的，可怜的。他们在人类社会没有做好欢迎的准备时降生了。虽然不知道他们是谁，但是可以想见他们的成长，婚姻，家庭将会面临很多人们没有考虑到的问题。口口声声说要为他们负责的贺建奎，不知道有没有做好负责任准备？ 
+这个研究里基因被编辑的孩子是无辜的，可怜的。他们在人类社会没有做好欢迎的准备时降生了。虽然不知道他们是谁，但是可以想见他们的成长，婚姻，家庭将会面临很多人们没有考虑到的问题。口口声声说要为他们负责的贺建奎，不知道有没有做好负责任准备？  
+
+基因编辑技术门槛不高，从技术角度说，产生基因编辑的婴儿这个事情世界上很多实验室都可以做到。贺建奎这个“第一”不是由于他有技术，而是由于他无底线。事有可为不可为，正如爱因斯坦说的，不是才智，而是人格造就了伟大的科学家。
 
 
 
