small tweak on wording

--- a/content/cn/2018-11-28-.md
+++ b/content/cn/2018-11-28-.md
@@ -10,7 +10,7 @@ tags: []
 
 昨天上午看到这个消息的时候，心里觉得很震惊，等点开看了内容后，心里升起一股凉气，继而感到愤怒。 
 
-从大前年开始，我开始在自己的实验里使用基于CRISPR-Cas9的基因编辑技术。该技术操作简单，工作效率极高，迅速成为我自己和很多科研人员的工作中常用的利器，被广泛应用于制造功能缺失突变体和荧光蛋白标记的生物体。在用于基础研究的同时，我们也强烈地感受到，基因编辑技术以其强大，必将在未来的医疗领域大显身手，为人类的健康保驾护航，包括在**必要的时候**对人类体细胞和生殖细胞的基因编辑。 
+从大前年开始，我开始在自己的实验里使用基于CRISPR-Cas9的基因编辑技术。该技术操作简单，工作效率极高，迅速成为很多科研人员的工作中常用的利器，被广泛应用于制造功能缺失突变体和荧光蛋白标记的生物体等研究活动中。在用于基础研究的同时，我们也强烈地感受到，基因编辑技术以其强大，必将在未来的医疗领域大显身手，为人类的健康保驾护航，包括在**必要的时候**对人类体细胞和生殖细胞的基因编辑。 
 
 既然如此，为什么我会对这产生第一个基因编辑婴儿的研究感到愤怒呢？原因当然有，因为这个研究以一种我认为不会在科研人员身上看到的无脑方式，践踏了对人类个体的尊重；以一种我不愿意在任何人身上看到的不负责的态度，危及两个，甚至更多的孩子的安全。 
 
