minor changes on texts

--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -61,7 +61,7 @@ tags: []
 
 《唐诗三百首》可算是唐诗选集史上的一朵不凋谢的奇葩，这个版本的《静夜思》作为这朵奇葩上的一片花瓣也就映入了万万千千读书人的眼里，心里。  
 
-了解了《静夜思》的版本演变史，我不得不接受自己从小学了个山寨版《静夜思》的事实（还是不得不感叹一下，这个反转太大了！不过也给我长了个记性，千万别对任何事情感到太有把握，多考虑别的可能性---生活远比我们想象的丰富）。那么问题来了，哪个版本更好呢？  
+了解了《静夜思》的版本演变史，我不得不接受自己从小学了个山寨版《静夜思》的事实（还是不得不感叹一下，这个反转太大了！不过也给我长了个记性，千万别对任何事情感到太有把握，多考虑别的可能性---生活远比我们想象的丰富）。那么问题来了，哪个版本更好呢？要是要是文字的流传也遵照自然选择里优胜劣汰的规则，那留下来的自然是好的了，但是进化里也不尽然是好的流传，根据中性进化理论，运气因素也很重要。所以根据哪个流传广来判断好坏似乎不可取，那分析一下吧。
 
 虽然我第一眼看这首原版《静夜思》，感到各种不通和别扭，但既然它很可能是李白的原始版本，那我自然要放尊重些，多看几遍，跟我们常见的流行版本再比较比较。  
 
