--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -107,4 +107,4 @@ tags: []
 你觉得李白当时在哪里呢？
 
 
-[^1]: 在日本的公共厕所里，有可能你会看到类似“别把床弄脏了”的话，当然，是日语写得。别惊讶，这里的床不是用来睡的：）。
+[^1]: 在日本的公共厕所里，有可能你会看到类似“别把床弄脏了”的话，当然，是日语写的。别惊讶，这里的床不是用来睡的：）。
