--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -6,7 +6,7 @@ slug: lihaku
 categories: []
 tags: []
 ---
-如果一个中国人只听说过一首唐诗，那么这首唐诗最有可能是哪首？李白的《静夜思》或许是很多人心目中的那首唯一吧。 
+如果一个中国人只听说过一首唐诗，那么这首唐诗最有可能是哪首？李白的《静夜思》或许是很多人心目中的那个答案吧。 
 
 我想这也可以推广到中国以外的地方，任何一个人，如果知道一首唐诗，那这首诗很可能就是李白的《静夜思》。一次和一个日本朋友聊天，聊到唐诗，他很高兴地告诉我他知道李白的《静夜思》，并拿出纸笔，写下了：
 
