--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -17,7 +17,7 @@ tags: []
 
 我吃了一惊，或许正如读到这首诗的你---诗第一和第三句的两个“明”字变成了“看”和“山”。都说习惯成自然，一点不假，习惯了“明月光”和“望明月”的我，一看到这诗就觉得不自然，不如“原诗”顺畅，清雅，反正就是不好。这里，我把原诗两个字用引号括起来是有原因的，这个原因是：以上看到的这个版本才是原诗。  
 
-当我把我们中文里常见的版本写个朋友看后，他也吃了一惊。因为这首诗选入了日本的小学课本，他学的就是他写给我看的那版，从来不知道还有其他版本。那么，问题来了，哪个版本才是李白写的原始版本呢？我当时第一反应是，这个流行于日本的肯定不是原版。首先读起来感觉不好，感觉有点粗糙，不像诗了；其次一首诗传到日本，中间发生误传的机会太多，增加了日本版出错的可能；最后，我们读熟了的版本怎么可能是错的？！这最后一条不算啥有说服力的理由，只是我当时心里活动的一个写照。当然，在我看来，前两条理由已经足够说明日本版《静夜思》很可能是误本了。  
+当我把我们中文里常见的版本写给朋友看后，他也吃了一惊。因为这首诗选入了日本的小学课本，他学的就是他写给我看的那版，从来不知道还有其他版本。那么，问题来了，哪个版本才是李白写的原始版本呢？我当时第一反应是，这个流行于日本的肯定不是原版。首先读起来感觉不好，感觉有点粗糙，不像诗了；其次一首诗传到日本，中间发生误传的机会太多，增加了日本版出错的可能；最后，我们读熟了的版本怎么可能是错的？！这最后一条不算啥有说服力的理由，只是我当时心里活动的一个写照。当然，在我看来，前两条理由已经足够说明日本版《静夜思》很可能是误本了。  
 
 不过要让朋友明白自己在日本学了山寨的《静夜思》，我打开电脑，上网搜索材料用以说服他。不过一搜之下，傻眼的人是我，维基百科上赫然写着：
 
@@ -25,7 +25,7 @@ tags: []
 
 怎么会这样？现在需要被说服的人变成我了。为什么说我们常看的流行版本“不忠於原詩”呢？ 
 
-要证明哪个版本是李白的原稿，说难非常难，难到几乎不可能。因为除非找到可信的李白手稿，将其与现存版本映照，看哪个是真的，或者哪个更接近于原始版本；要说简单，也有简单的办法，那就是拿现在的版本与离唐朝比较接近的时代的人抄录的版本对比，虽然那些版本也可能出错，但是毕竟和李白的原始版本更接近的概率更大。这和生物进化领域根据现行生物（或基因）的特征对祖先物种（或基因）的推定方式很像。维基百科里就说明了为什么流传最广的版本可能才是“山寨”的。我将维基百科和其他资料上查询的结果概括如下:  
+要证明哪个版本是李白的原稿，说难非常难，难到几乎不可能。除非找到可信的李白手稿，将其与现存版本映照，看哪个是真的，或者哪个更接近于原始版本；要说简单，也有简单的办法，那就是拿现在的版本与离唐朝比较接近的时代的人抄录的版本对比，虽然那些版本也可能出错，但是毕竟和李白的原始版本更接近的概率更大。这和生物进化领域根据现行生物（或基因）的特征对祖先物种（或基因）的进行推定的方式很像。维基百科里就说明了为什么流传最广的版本可能才是“山寨”的。我将维基百科和其他资料上查询的结果概括如下:  
 
 李白没有《静夜思》的手稿留下，正如大多数古诗；也没有找到可信的唐时《静夜思》的抄本；现在能看到的较早版本是北宋郭茂倩所编《乐府诗集》和南宋洪迈的《万首唐人绝句》里记载的，和现在流传在日本的版本一致（日本版《静夜思》应该是宋朝传到日本的，因为日本静嘉堂文库藏有宋刊本《李太白文集》）。元朝的《分类补注李太白集》和《唐诗品汇》里也跟上述版本一致。最早出现差异的是元朝范梈編成的《木天禁語》里记载的《静夜思》，由于比较“别致”，所以抄录在此：
 
@@ -34,7 +34,7 @@ tags: []
 起头望明月，   
 低头思故乡。  
 
-两个“明”字均出现了不说，还多出一个额外的差异，“举头”变成了“起头”。之后明清时期的唐诗选本里开始出现两个“明”字和“看”，“山”两个字以排列组合形式出现在相应位置的各种版本。比如明朝赵光所记的版本和清朝康熙年间沈德潜所记的版本，我们可以把它们当成《静夜思》进化过程的中间型。 
+两个“明”字均出现了不说，还多出一个额外的差异，“举头”变成了“起头”。之后明清时期的唐诗选本里开始出现两个“明”字和“看”，“山”两个字的各种排列组合。比如明朝赵光所记的版本和清朝康熙年间沈德潜所记的版本，我们可以把它们当成《静夜思》进化过程的中间型。 
 
 赵光版为： 
 
@@ -50,7 +50,7 @@ tags: []
 举头望山月，  
 低头思故乡。  
 
-不过“起头”这个变异倒是没有被遗传下来，估计是用字太过清奇的缘故吧。生物进化的一大谜题是进化中间型的缺失问题，在多数情况下，我们可以在化石里找到生物的祖先特征，还有我们现在看到的生物现在的特征，介于二者之间的中间类型却往往找不到，导致难以推定祖先物种是如何变化成现在我们看到的样子的。要是进化过程也有这么完好的版本记录该多好啊。 
+不过“起头”这个变异倒是没有被遗传下来，估计是用字太过清奇的缘故吧。生物进化的一大谜题是进化中间型的缺失问题，在多数情况下，我们可以在化石里找到生物的祖先特征，也可以看到的现存生物的特征，而介于二者之间的中间类型却往往找不到，导致难以推定祖先物种是如何变化成现在我们看到的样子的。要是进化过程也有如《静夜思》这样完好的版本记录该多好啊。 
 
 和沈德潜同时期的蘅塘退士孙先生整理了《唐诗三百首》，可能是由于其选诗得当吧，该书迅速流行起来，占领了千家万户的大小书架，将唐诗传播到寻常百姓家，其中自然包括了那首已经变了两个字的《静夜思》： 
 
@@ -61,11 +61,11 @@ tags: []
 
 《唐诗三百首》可算是唐诗选集史上的一朵不凋谢的奇葩，这个版本的《静夜思》作为这朵奇葩上的一片花瓣也就映入了万万千千读书人的眼里，心里。  
 
-了解了《静夜思》的版本演变史，我不得不接受自己从小学了个山寨版《静夜思》的事实（还是不得不感叹一下，这个反转太大了！不过也给我长了个记性，千万别对任何事情感到太有把握，多考虑别的可能性---生活远比我们想象的丰富）。那么问题来了，哪个版本更好呢？要是要是文字的流传也遵照自然选择里优胜劣汰的规则，那留下来的自然是好的了，但是进化里也不尽然是好的流传，根据中性进化理论，运气因素也很重要。所以根据哪个流传广来判断好坏似乎不可取，那分析一下吧。
+了解了《静夜思》的版本演变史，我不得不接受自己从小学了个山寨版《静夜思》的事实（还是不得不感叹一下，这个反转太大了！不过也给我长了个记性，千万别对任何事情感到太有把握，多考虑别的可能性---生活远比我们想象的丰富）。那么问题来了，哪个版本更好呢？要是要是文字的流传也遵照自然选择里优胜劣汰的规则，那留下来的自然是好的了，但是进化里也不尽然是只有好的流传，根据中性进化理论，运气因素也很重要，适应力强的生物也可能因为点背而灭菌呢。所以根据哪个流传广来判断好坏似乎不可取，那分析一下吧。
 
 虽然我第一眼看这首原版《静夜思》，感到各种不通和别扭，但既然它很可能是李白的原始版本，那我自然要放尊重些，多看几遍，跟我们常见的流行版本再比较比较。  
 
-也不知是不是心里作用，细看之下，突然觉得我们现行版本里第一句和第三局的两个“明”显得有点扎眼，有点重复了。虽然诗词里上下句间一般要避免使用相同的字，但是重复用字的情况也不是完全没有。这不是判断现行版本不好的依据，我只是奇怪为什么我以前没有注意到。把这个先放一边，看看原版。其实第一次看到原版的时候，让我觉得不自然的就是第一句“床前看月光”里这个“看”字。“明月光”是一个静态描写，想想笼罩在薄纱似的月光里的李白，多美!而“看月光”则有个很突兀的动作加入了进来，习惯了静态画面的我们自然觉得似乎“看”字打破了《静夜思》的宁静。如果我们忘了脑中这第一句静态的基调，重新感受一下，会不会觉得稍微好点呢？在重新感受之前，我还查了一下《古汉语常用字典》，看看“看”字都有些什么意思。书中说“看”字主要有三义：  
+也不知是不是心理作用，细看之下，突然觉得我们现行版本里第一句和第三局的两个“明”显得有点扎眼，有点重复了。虽然诗词里上下句间一般要避免使用相同的字，但是重复用字的情况也不是完全没有。这不是判断现行版本不好的依据，我只是奇怪为什么我以前没有注意到。把这个先放一边，看看原版。其实第一次看到原版的时候，让我觉得不自然的就是第一句“床前看月光”里这个“看”字。“明月光”是一个静态描写，想想笼罩在薄纱似的月光里的李白，多美!而“看月光”则有个很突兀的动作加入了进来，习惯了静态画面的我们自然觉得似乎“看”字打破了《静夜思》的宁静。如果我们忘了脑中这第一句静态的基调，重新感受一下，会不会觉得稍微好点呢？在重新感受之前，我还查了一下《古汉语常用字典》，看看“看”字都有些什么意思。书中说“看”字主要有三义：  
 
 1. 以手遮目而望。  
 2. 瞧，看。可引申为观察。  
@@ -92,7 +92,7 @@ tags: []
 
 额，这也很美啊！！！唉，算了，不做区分了，都行，都行。   
 
-说完了这两个版本，这首《静夜思》值得一提的还有第一句那个“床”。原字是“牀”，现在写作“床”。这个“床”的形象可能和大家现代看到的床有很大的不同。这个不同有多大呢？取决于“床”字在诗中如何解。  
+说完了这两个版本，这首《静夜思》值得一提的还有第一句那个“床”。原字是“牀”，现在写作“床”。这个“床”的形象可能和大家现代看到的床有很大的不同。这个不同有多大呢？取决于“床”字在诗中如何解。“床”字主要有三个释义：  
 
 1. 卧具。  
 2. 井栏。  
