--- a/content/cn/2019-01-11-lihaku.md
+++ b/content/cn/2019-01-11-lihaku.md
@@ -6,7 +6,7 @@ slug: lihaku
 categories: []
 tags: []
 ---
-如果一个中国人只听说过一首唐诗，那么这首唐诗最有可能是哪首？李白的《静夜思》或许是很多人心目中的那个答案吧。 
+如果一个中国人只听说过一首唐诗，那么这首唐诗最有可能是哪首？李白的《静夜思》或许是很多人心目中的答案吧。 
 
 我想这也可以推广到中国以外的地方，任何一个人，如果知道一首唐诗，那这首诗很可能就是李白的《静夜思》。一次和一个日本朋友聊天，聊到唐诗，他很高兴地告诉我他知道李白的《静夜思》，并拿出纸笔，写下了：
 
@@ -50,7 +50,7 @@ tags: []
 举头望山月，  
 低头思故乡。  
 
-不过“起头”这个变异倒是没有被遗传下来，估计是用字太过清奇的缘故吧。生物进化的一大谜题是进化中间型的缺失问题，在多数情况下，我们可以在化石里找到生物的祖先特征，也可以看到的现存生物的特征，而介于二者之间的中间类型却往往找不到，导致难以推定祖先物种是如何变化成现在我们看到的样子的。要是进化过程也有如《静夜思》这样完好的版本记录该多好啊。 
+不过“起头”这个变异倒是没有被遗传下来，估计是用字太过清奇的缘故吧。生物进化的一大谜题是进化中间型的缺失问题，在多数情况下，我们可以在化石里找到生物的祖先特征，当然也可以看到身边现存生物的特征，而介于二者之间的中间类型却往往找不到，导致难以推定祖先物种是如何变化成现在我们看到的样子的。要是进化过程也有如《静夜思》这样完好的版本记录该多好啊。 
 
 和沈德潜同时期的蘅塘退士孙先生整理了《唐诗三百首》，可能是由于其选诗得当吧，该书迅速流行起来，占领了千家万户的大小书架，将唐诗传播到寻常百姓家，其中自然包括了那首已经变了两个字的《静夜思》： 
 
@@ -75,7 +75,7 @@ tags: []
 
 既然到了第三四句了，那是望“明月”好还是望“山月”好呢？在分析“山月”好还是“明月”好之前，保险起见，还是先看看作为谓语的这个“望”字是什么意思吧。“望”字含义比较多，其中一些一看就跟望月无关，就不列在这里了。最有潜力成为李白心中之“望”的是字典里列的第一义远望和第七义仰视或远视。意思都差不多，大家随意选取吧，有一点是相同的，那就是距离感。要突出距离感的话，似乎望“山月”更好一点了。自然，望“明月”也没啥不好，不管是明月还是山月，距离感都是自带属性嘛。那先不说“望”，就看“山月”和“明月”哪个好点呢？“山月”有着位置信息，可以让我们大概重建出李白当时所处的环境，能看“山月”，应该是里都市比较远的所在吧。当年的李白或许由于望了“山月”，难以入眠，想起了远方的某人，顺带写下了“峨眉山月半轮秋”，也可以写“举杯邀明月，对影成三人”。“望山月”的李白不大可能会在同一天写“长安一片月，万户捣衣声”，也不大可能“却下水晶帘，玲珑望秋月”。望“明月”的李白没有环境限制，自然想写啥就写啥了。没有地域限制也正是“望明月”的好处，不是对李白，而是对读者。我想《静夜思》之所以如此动人，正是因为诗中这份人人都在某些时候可能会泛起的思乡之情吧。而思乡的人可能正在一个旅店中，正在船头，正在街上。只要头顶一轮明月，李白的这首《静夜思》就会从思绪中流淌出来，于是思乡的人就自然将自己代入到诗里，成了李白。如果换成“望山月”，那代入条件就更苛刻些了，或许就不如现在这么朗朗上口了。当然，这是从传播的角度看，不管是“望明月”还是“望山月”，都是很美的。   
 
-看来“明月光”挺好，“看月光”也不错；“望明月”可以，“望山月”也行。啥都行，那哪个是原版还重要吗？当然，正如之前说的，现在我国广泛流传的版本里两个“明”字略显有点重复了，可以考虑去掉其中一个，考虑到方便读者把自己代入成为李白，我想去掉第一句里的“明”比较好，于是我心目中的《静夜思》就出炉了：  
+看来“明月光”挺好，“看月光”也不错；“望明月”可以，“望山月”也行。啥都行，那哪个是原版还重要吗？当然，正如之前说的，现在我国广泛流传的版本里两个“明”字略显重复，可以考虑去掉其中一个，考虑到方便读者把自己代入成为李白，我想去掉第一句里的“明”比较好，于是我心目中的《静夜思》就出炉了：  
 
 
 > 床前看月光，  
@@ -100,7 +100,7 @@ tags: []
 
 这第一种意思和现代的床是最接近的，但是形象却很不一样。古人一般是双膝据地而坐，和现代很多日本人的习惯很相似。床是可坐可卧的，一个木头小台子，比我们现代的床要低得多。我想可能跟日本榻榻米屋子里放床垫的小台子很像吧。[^1]   
 
-第二个意思井栏或许大家不熟悉，不过，“郎骑竹马来，绕床弄青梅”绕的据说就是这个“床”。大家或许有点反应过来了，这意思一变，李白就从屋里到了屋外了。  
+第二个意思井栏或许大家不熟悉，不过，“郎骑竹马来，绕床弄青梅”绕的据说就是这个“床”。大家估计有点反应过来了，这意思一变，李白就从屋里到了屋外了。  
 
 第三个意思是胡床，胡床是小椅子，小马扎类似的东西，放在屋里也行，放在屋外也可，自由度就大了。   
 
