small tweaks on old posts

--- a/content/cn/2017-03-04-SuXin.md
+++ b/content/cn/2017-03-04-SuXin.md
@@ -11,20 +11,19 @@ slug: SuXin
 
 如梦令（居士本来无垢）
 
-> 水垢何曾相受，
-细看两俱无有。
-寄语揩背人，尽日劳君挥肘。
-轻手，
-轻手，
-居士本来无垢。
+> 水垢何曾相受，  
+细看两俱无有。  
+寄语揩背人，尽日劳君挥肘。  
+轻手，轻手，  
+居士本来无垢。  
 
 
-> 自净方能净彼，
-我自汗流呀气。
-寄语澡浴人，
-且共肉身游戏。
-但洗，
-但洗，
+
+> 自净方能净彼，  
+我自汗流呀气。  
+寄语澡浴人，  
+且共肉身游戏。  
+但洗，但洗，  
 俯为人间一切。
 
 不知最后那个“切”字，在宋朝是如何发音的。
@@ -36,10 +35,19 @@ slug: SuXin
 
 泌园春（将止酒）
 
-> 杯汝来前！老子今朝，点检形骸。甚长年抱渴，咽如焦釜；于今喜睡，气似奔雷。汝说“刘伶，古今达者，醉后何妨死便埋”。浑如此，叹汝于知己，真少恩哉！
+> 杯汝来前！老子今朝，  
+点检形骸。甚长年抱渴，  
+咽如焦釜；于今喜睡，  
+气似奔雷。汝说“刘伶，  
+古今达者，醉后何妨死便埋”。  
+浑如此，叹汝于知己，真少恩哉！
 
 
-> 更凭歌舞为媒。算合作人间鸩毒猜。况怨无小大，生于所爱；物无美恶，过则为灾。与汝成言，勿留亟退，吾力犹能肆汝杯。杯再拜，道“麾之即去，招则须来。”
+> 更凭歌舞为媒，算合作人间鸩毒猜。  
+况怨无小大，生于所爱；  
+物无美恶，过则为灾。  
+与汝成言,勿留亟退，吾力犹能肆汝杯。  
+杯再拜，道“麾之即去，招则须来。”
 
 真有点韩愈《送穷文》的意思。“叹汝于知己，真少恩哉”，这一句真是道尽了酒道三味啊。
 
