--- a/content/cn/2017-03-23-LaoShe.md
+++ b/content/cn/2017-03-23-LaoShe.md
@@ -10,15 +10,27 @@ slug: LaoShe
 
 一本老舍文集，反反复复看了很多遍，其中有一篇叫《一些印象》，我一直没有看，每次翻到那里都跳过。主要是不大喜欢这个题目，因为有点意识流的感觉，而意识流类的文字我多数不大喜欢。最近又不小心翻到了，这次没有直接跳过，看了下去，发现居然有彩蛋，那就是在文章末尾附的老舍的诗。我以前真不知道老舍也写诗，他的小说，散文，剧本我都很喜欢，但诗还没有关注过。这次的发现对我来说是惊喜交集，惊是发现了诗，喜是居然这些诗如此之好。自己虽然不打算再随便瞎写了，但是能把老舍这几首贴过来，也算是过把瘾吧。
 
-> 多少春光轻易去？无言花鸟夜如秋。东风似梦微添醉，小月知心只照愁！柳样诗思情入影，火般桃色艳成羞。谁家玉笛三更后？山倚疏星人倚楼。
+> 多少春光轻易去？无言花鸟夜如秋。   
+东风似梦微添醉，小月知心只照愁！   
+柳样诗思情入影，火般桃色艳成羞。   
+谁家玉笛三更后？山倚疏星人倚楼。  
 
 
-> 一片闲情诗境里，柳风淡淡柝声凉。山腰月少青松黑，篱畔光多玉李黄。心静渐知春似海，花深每觉影生香。何时买得田千顷，遍种梧桐与海棠！
 
-> 且莫贪眠减却狂，春宵月色不平常！碧桃几树开蝴蝶，紫燕联肩梦海棠。花比诗多怜夜短，柳如人瘦为情长。年来潦倒漂萍似，惯与东风道暖凉。
+> 一片闲情诗境里，柳风淡淡柝声凉。   
+山腰月少青松黑，篱畔光多玉李黄。   
+心静渐知春似海，花深每觉影生香。   
+何时买得田千顷，遍种梧桐与海棠！  
 
 
-老舍的文字能直接进到我的心里，这里说的不仅仅是这几首诗。还记得有一段时间心里一直能默诵他的几篇文章，《无题》，《我的母亲》等，字字刻骨，句句铭心，我觉得写那些文字的，才是真正的老舍，而不是那个写《当幽默变成油抹》的作家。
+> 且莫贪眠减却狂，春宵月色不平常！   
+碧桃几树开蝴蝶，紫燕联肩梦海棠。   
+花比诗多怜夜短，柳如人瘦为情长。   
+年来潦倒漂萍似，惯与东风道暖凉。  
+
+
+
+老舍的文字能直接进到我的心里，这里说的不仅仅是这几首诗。还记得有一段时间心里一直能默诵他的几篇文章，《无题》，《我的母亲》等，字字刻骨，句句铭心，我觉得写那些文字的，才是真正的老舍，而不是那个写《当幽默变成油抹》的幽默作文家。
 
 
 
