错别字大大减少

--- a/content/cn/2019-03-26-xiaoxiao.md
+++ b/content/cn/2019-03-26-xiaoxiao.md
@@ -49,7 +49,7 @@ tags: []
 
 > 秋水清无底，萧然浄客心  
 
-萧然的感觉是什么？我记得有一次在山里，坐在潭变，盯着深深的潭水的时候，曾经有过一种面对未知的感觉，有点害怕，却也有点期待。不知道这是不是“萧然”了。   
+萧然的感觉是什么？我记得有一次在山里，坐在潭边，盯着深深的潭水的时候，曾经有过一种面对未知的感觉，有点害怕，却也有点期待。不知道这是不是“萧然”了。   
 
 
 
