--- a/content/cn/2019-03-26-xiaoxiao.md
+++ b/content/cn/2019-03-26-xiaoxiao.md
@@ -9,25 +9,23 @@ tags: []
 
 “萧萧”是个比较忙的词，常现身于诗词之中。诗词作者，体裁，主题尽可不同，但“萧萧”依旧。  
 
-荆轲要去刺杀秦王了，在易水边唱“风萧萧兮易水寒”，《古诗十九首》里无名氏叹“白杨多悲风，萧萧愁杀人”，老杜也说“萧萧北风劲，抚事煎百虑。”这横跨百年前人的“萧萧”是什么意思？我想，就算你从来没有见过“萧萧”这个词，凭上边这些例子，也能大致推断出“萧萧”表达的某种感觉，跟风有关。对的，“萧萧”是个拟声词，说的是风吹过的声音。风有声音吗？这是个比较困难的问题。不过不必拘泥于风是什么，发声原理为何，你看韩愈说的多清楚：
+荆轲要去刺杀秦王了，在易水边唱“风萧萧兮易水寒”，《古诗十九首》里无名氏叹“白杨多悲风，萧萧愁杀人”，老杜也说“萧萧北风劲，抚事煎百虑。”这横跨百千年的“萧萧”是什么意思？我想，就算你从来没有见过“萧萧”这个词，凭上边这些例子，也能大致推断出“萧萧”表达的是某种感觉，跟风有关。对的，“萧萧”是个拟声词，说的是风吹过的声音。风有声音吗？这是个比较难回答的问题，得做番分析。不过不必拘泥于风是什么，发声原理为何，你看韩愈说的多清楚：
 
 > 大凡物不得其平则鸣。草木之无声，风挠之鸣。  
 
-草木竹树是无声的，风击之而鸣。所以“萧萧”的声音也是流变着的，看风吹到了哪里，吹动了什么。“萧萧”的不是风，也不是物，而是风和物的结合。于是，草木可以萧萧，山石可以萧萧，旗帆可以萧萧，市井也可以萧萧。萧萧的声音是千变万化的，所以当你看到“萧萧”的时候，一定要看看，诗人作家这次“萧萧”了什么。   
+草木竹树是无声的，风击之而鸣，鸣则述以萧萧。所以“萧萧”的声音也是流变着的，看风吹到了哪里，吹动了什么。“萧萧”的不是风，也不是物，而是风和物的结合。于是，草木可以萧萧，山石可以萧萧，旗帆可以萧萧，市井也可以萧萧。萧萧的声音是千变万化的，所以当你看到“萧萧”的时候，一定要看看，诗人作家这次“萧萧”了什么。   
 
 当你读到杜甫的：
 
 > 无边落木萧萧下，不仅长江滚滚来   
 
-的时候，请别忘了“萧萧”的声音---除了飘落的木叶，奔流的长江，杜甫还给了我们配上了秋风激动木叶是发出的肃杀之音。没有萦绕耳边的萧萧风声的《登高》是不够美的，杜甫会怪我们给他的诗按下了静音键。      
+的时候，请别忘了“萧萧”的声音---除了飘落的木叶，奔流的长江，杜甫还给了我们配上了秋风激动木叶时发出的肃杀之音。没有萦耳的萧萧风声的《登高》是不够美的，杜甫会怪我们给他的诗按下了静音键。      
 
 “萧萧”指的仅仅是风声吗？也不是。诗经里说：
 
 > 萧萧马鸣，悠悠旆旌。  
 
-这让“萧萧”跟马也牵上了关系。所以李白也就随了《诗经》定下来的例，信笔写下“挥手自兹去，萧萧班马鸣。”杜甫也紧随李白，写下“车辚辚，马萧萧，行人弓箭各在腰。”   
-
-为什么马鸣可用“萧萧”来形容呢？我一直没有想明白。刘继庄说“驴鸣似哭，马嘶如笑”。我听过马叫，但不知道它怎么可以笑得“萧萧”呢？  
+这让“萧萧”跟马也牵上了关系。所以李白也就随了《诗经》定下来的例，信笔写下“挥手自兹去，萧萧班马鸣。”杜甫也紧随李白，写下“车辚辚，马萧萧，行人弓箭各在腰。”马鸣跟风声是不一样的，但是为何也“萧萧”？这个问题我一直没有想明白。刘继庄说“驴鸣似哭，马嘶如笑”。我听过马叫，但实在不知道它怎么可以叫得“萧萧”？  
  
 好吧，不纠结了。马鸣就是“萧萧”的，不管你信不信，反正我信了。但你以为“萧萧”就是风声跟马声吗？太天真了。不信，你看沈说的：
 
