--- a/content/cn/2019-03-26-.md
+++ b/content/cn/2019-03-26-.md
@@ -16,10 +16,14 @@ slug: no-say-all
 
 这话说得挺狠的。以前读过张籍和王建的诗，虽然没有特别的喜欢，但是也没有觉得特别的不堪（能在《诗镜总话》被提及，想来还是有些读头的）。我想看看张籍和王建到底写了啥，居然招致陆时雍这等批评，于是又翻了一下他们的诗作。  
 
-张籍的《节妇吟》是首很有名的政治诗，其中“还君明珠双泪垂，恨不相逢未嫁时”是很美的一句，不仅比较得体的拒绝了对立政治集团的引诱，而且现在也成为很多未得先遇的男女感叹时缘不济时常用的。简单的一句诗，道出了多少事不由人啊。张籍另一首名作《秋诗》也很好，用短短四句写出了远游之人对家的思念之情：
+张籍的《节妇吟》是首很有名的政治诗，其中“还君明珠双泪垂，恨不相逢未嫁时”是很美的一句，不仅比较得体的拒绝了对立政治集团的引诱，而且也成为现在很多未得先遇的男女感叹时缘不济时常用的,简单的一句诗，道出了多少事不由人啊。  
+
+张籍另一首名作《秋诗》也很好：
 
 > 洛阳城里见秋风，欲作家书意万重。  
 复恐匆匆说不尽，行人临发又开封。 
+
+短短四句诗写出了远游之人对家的思念。在行人临发前，对家信封而又开，为何诗人如此，因为在乎。
 
 另外，张籍描写对战争中失去联系的朋友的担忧和挂念之情的《没藩故人》在我看来也是写得情真意切：
 
@@ -37,7 +41,7 @@ slug: no-say-all
 > 中庭地白树栖鸦，冷露无声湿桂花。  
 今夜月明人尽望，不知秋思落谁家？  
 
-陆时雍对王建“儿女子之所为”的评价别说对不对，连他具体指的是什么我都不知道，这个等以后有所理解了再说吧。  
+陆时雍对王建“儿女子之所为”的评价别说对不对，我连他具体指的是什么都不知道，这个等以后有所理解了再说吧。  
 
 不过他在后边稍微解释了一下，并拿李白杜甫做了正面教材：
 
