--- a/content/cn/2019-03-26-.md
+++ b/content/cn/2019-03-26-.md
@@ -49,6 +49,8 @@ slug: no-say-all
 
 我能部分体会《丽人行》和《杨叛儿》的好处，其含蓄和张力（李杜用典的功力实在是羚羊挂角，不露痕迹（再括号：羚羊真能挂角吗？有点怀疑）），但也无法从它们的好反见张籍和王建诗的不好。  
 
-对具体诗人的评价先不说了，陆先生说的“言尽则俚”的总原则是不错的。不仅是写诗，与人交往也是如此。当说不说，失人；不当而说，失言。孔夫子说，聪明的人既不要失了人，也不要诗了言。  
+对具体诗人的评价先不说了，陆先生说的“言尽则俚”的总原则是不错的，记得稍微留些余地供人周旋。不仅是写诗，与人交往也是如此。当说不说，失人；不当而说，失言。孔夫子说，聪明的人既不要失了人，也不要失了言。[^1]  
 
 附议。
+
+[^1]: 子曰：可与言而不与之言，失人；不可与言而与言，失言。知者不失人，亦不失言。(《论语·卫灵公第十五》) 
