--- a/content/cn/2019-04-01-reiwa.md
+++ b/content/cn/2019-04-01-reiwa.md
@@ -10,9 +10,9 @@ tags: []
 
 日本天皇的年号一般都是从中国古代的典籍里去选字的（从大化（645年）开始到平成（2019）247个年号，例外为 0/247）。比如“明治”取自《易经》“聖人南面而聽天下，嚮明而治”；“昭和”取自《尚书》“百姓昭明，協和萬邦”；而现在的“平成”则取自《史記·五帝本紀》的“父義，母慈，兄友，弟恭，子孝，內平外成”。“令和”是日本历史上有明确出处的年号中第一个不是从中国典籍里找灵感的。  
 
-不过，日本的年号是否出自中国书，我觉得不是应该我们上心的事，虽然“从来如此”，但是如鲁迅说的“从来如此，那便~~一直如此~~对吗？”。我反而对之前日本那么多代年号都选自我国典籍感到有点惊讶。我想，如果有人因为别人从我们的古书里选字来做年号而感到自豪，那他或她应该意识到这体现的是我国古代的文化软实力，是前人天才和努力得到的认可；跟我们今人关系不大。文化的发展不仅要承前，更要启后。在我看来，这启后的部分，成败才是在我们今人的手里，是最值得我们去努力的。   
+不过，日本的年号是否出自中国书，我觉得不是应该我们上心的事。虽然“从来如此”，但是如鲁迅说的“从来如此，那便~~一直如此~~对吗？”。我反而对之前日本那么多代年号都选自我国典籍感到有点惊讶。我想，如果有人因为别人从我们的古书里选字来做年号而感到自豪，那他应该意识到这体现的是我国古代的文化软实力，是前人天才和努力得到的认可；跟我们今人关系不大。文化的发展不仅要承前，更要启后。在我看来，这启后的部分，成败才是掌握在我们今人的手里，最值得我们去努力的。   
 
-这次的新年号“令和”选自日本的古诗籍《万叶集》，这是一本唐朝时期的日本诗集。这《万叶集》在日本的地位有点像是《诗经》在我国的地位---虽然我国已到了经济文化俱繁盛的唐朝，但在日本，这是第一次有了成文的诗集。《万叶集》里的诗其实大多数是中文写的，或是用汉字注音，或是直接用汉语写，从用词到语法都是跟大唐一样。所以其实中国人读《万叶集》比日本人可能要更轻松些。为什么会这样？因为大唐代表了当时最先进文化的发展方向啊。  
+这次的新年号“令和”选自日本的古诗籍《万叶集》，这是一本唐朝时期的日本诗集。《万叶集》在日本的地位有点像是《诗经》在我国的地位---虽然我国已到了经济文化俱繁盛的唐朝，但在日本，这才是第一次有了成文的诗集。《万叶集》里的诗其实大多数是中文写的，或是用汉字注音，或是直接用汉语写，从用词到语法都是跟大唐一样。所以其实中国人读《万叶集》比日本人可能要更轻松些。为什么会这样？因为大唐代表了当时最先进文化的发展方向啊。  
 
 “令和”二字选自《万叶集》里大伴旅人的《梅花謌卅二首》的序文。  
 
@@ -23,9 +23,9 @@ tags: []
 
 > 蘭亭序　　　　　　　　 　　  
 永和九年歳在癸丑  
-暮春之初、會于會稽山陰之蘭亭。脩禊事也。群賢畢至、少長咸集。此地有崇山、峻領茂林脩竹、又有清流、激湍暎帶左右。引以爲流觴曲水、列坐其次。雖無絲竹管弦之盛、一觴一詠、亦足以暢叙幽情。是日也、天朗氣清、惠風和暢。仰觀宇宙之大俯、察品類之盛。所以遊目騁懷、足以極視聽之娯、信可樂也。夫人之相與俯仰一世、或取諸懷抱悟言一室之内、或因寄所託、放浪形骸之外。雖趣舎萬殊、靜躁不同、當其欣於所遇、暫得於己、怏然自足、不知老之將至及。其所之既惓、情隨事遷、感慨係之矣。向之所欣、俛仰之间、以爲陳迹、猶不能不以之興懷。況脩短隨化、終期於盡。古人云死生亦大矣。豈不痛哉。毎攬昔人興感之由、若合一契。未甞不臨文嗟悼。不能喩之於懷。固知一死生爲虚誕、齊彭殤爲妄作。後之視今、亦由今之視昔。悲夫、故列叙時人、録其所述。雖世殊事異、所以興懷、其致一也。後之攬者、亦將有感於斯文。  
+暮春之初、會于會稽山陰之蘭亭。脩禊事也。群賢畢至、少長咸集。此地有崇山、峻領茂林脩竹、又有清流激湍、暎帶左右。引以爲流觴曲水、列坐其次。雖無絲竹管弦之盛、一觴一詠、亦足以暢叙幽情。是日也、天朗氣清、惠風和暢。仰觀宇宙之大俯、察品類之盛。所以遊目騁懷、足以極視聽之娯、信可樂也。夫人之相與俯仰一世、或取諸懷抱悟言一室之内、或因寄所託、放浪形骸之外。雖趣舎萬殊、靜躁不同、當其欣於所遇、暫得於己、怏然自足、不知老之將至及。其所之既惓、情隨事遷、感慨係之矣。向之所欣、俛仰之间、以爲陳迹、猶不能不以之興懷。況脩短隨化、終期於盡。古人云死生亦大矣。豈不痛哉。毎攬昔人興感之由、若合一契。未甞不臨文嗟悼。不能喩之於懷。固知一死生爲虚誕、齊彭殤爲妄作。後之視今、亦由今之視昔。悲夫、故列叙時人、録其所述。雖世殊事異、所以興懷、其致一也。後之攬者、亦將有感於斯文。  
 
-在大伴诗序里，你是不是看到了《兰亭序》的影子？《兰亭序》确实文，字俱佳，以前只知道有人一遍遍地摹写王右军的字，这才发现在异国也有人模仿其文。大伴旅人也随着其诗序里的“今和”二字，在一千多年后，走红上了新闻。  
+在大伴诗序里，你有没有看到了《兰亭序》的影子？《兰亭序》确实文，字俱佳，算得上千古一绝。以前只知道有人一遍遍地摹写王右军的字，这才发现在异国也有人模仿其文。大伴旅人也随着其诗序里的“今和”二字，在一千多年后，走红上了新闻。  
 
 可能有看官会想，你前边还说别人用不用中华典籍取年号跟我们今人无关，不该太上心；现在又生拉硬扯地说别人是摹写《兰亭序》，这是不是有点心口不一了？  
 
@@ -39,20 +39,21 @@ tags: []
 
 >时惟令月，景淑风和。
 
-不过，我觉得最具创造性的还是人肉出尹志平的那位大神。虽然不知道是谁，不过在下实在佩服得紧。元朝的时候，长春真人丘处机门下弟子尹志平一首《卜算子》直接“令和”了：
+不过，我觉得最具创造性的还是人肉出尹志平的那位大神。虽然不知道是谁，不过在下实在佩服得紧。长春真人丘处机门下弟子尹志平一首《卜算子》直接将“令”“和”给“令和”了：
 
 > 玉虚观夜静中，师父令和，都要奔波走，卜算子仍易其名曰北地乐。
 
 > 真性休空走，二物长相守。这些消息阿谁知，便是无中有。  
 实鼎琼花放，玉户金光透。作个清凉彼岸人，清静工夫就。  
 
-历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人，当过全真派的掌教；见过成吉思汗，救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
+历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人.当过全真派的掌教；见过成吉思汗;救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平：字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
 
-这“师傅令和，都要奔波走”是什么鬼？原来丘处机道长也写了首《卜算子》，吟完了估计觉得有点词谭独孤的感觉，寂寞沙洲冷。看到徒弟在身边，于是“小伊，给为师来一个。”于是，小伊就给师傅来了一个。丘道长的《卜算子》长什么样？请看： 
+这“师傅令和，都要奔波走”是什么鬼？原来丘处机道长也写了首《卜算子》，吟完后可能觉得有点词谭独孤，寂寞沙洲冷。看到徒弟在身边，于是“小伊，给为师来一个。”于是，小伊就给师傅来了一个。丘道长的《卜算子》长什么样？请看： 
 
->都要奔波走，谁肯坚心守。南北东西总一般，此外无它有。踏尽铁鞋迷，不出庵门透。水到渠成本自然，行满功成就。
+>都要奔波走，谁肯坚心守。南北东西总一般，此外无它有。 
+踏尽铁鞋迷，不出庵门透。水到渠成本自然，行满功成就。
 
 小伊也不容易啊，看看这尾字凑的！不过要说这词写的怎么样？唉，怎么说呢，害羞，害羞，师徒二人打油。   
 
-“令”与“和”都是好字，不过孔先生常说“巧言令色，鲜矣仁。”听惯了这话，我虽然知道这个“巧”“令”是说装巧和装令，不过还是对这两个字有点了偏见。看来需要多看点关于“令”字的别的词组，给中和一下了。
+“令”与“和”都是好字，不过孔先生常说“巧言令色，鲜矣仁。”听惯了这话，虽然我知道这个“巧”“令”是说装巧和装令，不过还是对这两个字有点了偏见。看来需要多看点关于“令”字的别的词组，给中和一下了。
 
