format the poem by qiu

--- a/content/cn/2019-04-01-reiwa.md
+++ b/content/cn/2019-04-01-reiwa.md
@@ -39,18 +39,18 @@ tags: []
 
 >时惟令月，景淑风和。
 
-不过，我觉得最具创造性的还是人肉出尹志平的那位大神。虽然不知道是谁，不过在下实在佩服得紧。长春真人丘处机门下弟子尹志平一首《卜算子》直接将“令”“和”给“令和”了：
+不过，我觉得最具创造性的还是人肉出尹志平的那位大神。虽然不知道是谁，不过在下实在佩服得紧。他查到长春真人丘处机门下弟子尹志平一首《卜算子》直接将“令”“和”给“令和”了：
 
 > 玉虚观夜静中，师父令和，都要奔波走，卜算子仍易其名曰北地乐。
 
 > 真性休空走，二物长相守。这些消息阿谁知，便是无中有。  
 实鼎琼花放，玉户金光透。作个清凉彼岸人，清静工夫就。  
 
-历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人.当过全真派的掌教；见过成吉思汗;救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平：字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
+历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人.当过全真派的掌教；见过成吉思汗;救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平，字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
 
-这“师傅令和，都要奔波走”是什么鬼？原来丘处机道长也写了首《卜算子》，吟完后可能觉得有点词谭独孤，寂寞沙洲冷。看到徒弟在身边，于是“小伊，给为师来一个。”于是，小伊就给师傅来了一个。丘道长的《卜算子》长什么样？请看： 
+这“师傅令和，都要奔波走”是什么鬼？原来丘处机道长也写了首《卜算子》（都要奔波走），吟完后可能觉得有点词谭独孤，寂寞沙洲冷。看到徒弟在身边，于是“小伊，给为师来一个。”于是，小伊就给师傅来了一个。丘道长的《卜算子》长什么样？请看： 
 
->都要奔波走，谁肯坚心守。南北东西总一般，此外无它有。 
+>都要奔波走，谁肯坚心守。南北东西总一般，此外无它有。    
 踏尽铁鞋迷，不出庵门透。水到渠成本自然，行满功成就。
 
 小伊也不容易啊，看看这尾字凑的！不过要说这词写的怎么样？唉，怎么说呢，害羞，害羞，师徒二人打油。   
