should be ok now

--- a/content/cn/2019-04-01-reiwa.md
+++ b/content/cn/2019-04-01-reiwa.md
@@ -46,7 +46,7 @@ tags: []
 > 真性休空走，二物长相守。这些消息阿谁知，便是无中有。  
 实鼎琼花放，玉户金光透。作个清凉彼岸人，清静工夫就。  
 
-历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人.当过全真派的掌教；见过成吉思汗;救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平，字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
+历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人。当过全真派的掌教；见过成吉思汗;救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平，字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
 
 这“师傅令和，都要奔波走”是什么鬼？原来丘处机道长也写了首《卜算子》（都要奔波走），吟完后可能觉得有点词谭独孤，寂寞沙洲冷。看到徒弟在身边，于是“小伊，给为师来一个。”于是，小伊就给师傅来了一个。丘道长的《卜算子》长什么样？请看： 
 
