tweaks on words

--- a/content/cn/2019-04-01-reiwa.md
+++ b/content/cn/2019-04-01-reiwa.md
@@ -8,9 +8,9 @@ tags: []
 ---
 今天日本发布了下任天皇的年号，曰“令和”。  
 
-日本天皇的年号一般都是从中国古代的典籍里去选字的（从大化（645年）开始到平成（2019）247个年号，例外为 0/247）。比如“明治”取自《易经》“聖人南面而聽天下，嚮明而治”；“昭和”取自《尚书》“百姓昭明，協和萬邦”；而现在的“平成”则取自《史記·五帝本紀》的“父義，母慈，兄友，弟恭，子孝，內平外成”。“令和”是日本历史上有明确出处的年号中第一个不是从中国典籍里找灵感的。  
+日本天皇的年号一般都是从中国古代的典籍里去选字的（从大化（645年）开始到平成（2019）247个年号，例外为 0/247）。比如“明治”取自《易经》“聖人南面而聽天下，嚮明而治”；“昭和”取自《尚书》“百姓昭明，協和萬邦”；而现在的“平成”则取自《史記·五帝本紀》的“父義，母慈，兄友，弟恭，子孝，內平外成。”“令和”是日本历史上有明确出处的年号中第一个不是从中国典籍里找灵感的。  
 
-不过，日本的年号是否出自中国书，我觉得不是应该我们上心的事。虽然“从来如此”，但是如鲁迅说的“从来如此，那便~~一直如此~~对吗？”。我反而对之前日本那么多代年号都选自我国典籍感到有点惊讶。我想，如果有人因为别人从我们的古书里选字来做年号而感到自豪，那他应该意识到这体现的是我国古代的文化软实力，是前人天才和努力得到的认可；跟我们今人关系不大。文化的发展不仅要承前，更要启后。在我看来，这启后的部分，成败才是掌握在我们今人的手里，最值得我们去努力的。   
+不过，日本的年号是否出自中国书，我觉得不是应该我们上心的事。虽然“从来如此”，但是如鲁迅说的“从来如此，那便~~一直如此~~对吗？”。我反而对之前日本那么多代年号都选自我国典籍感到有点惊讶。我想，如果有人因为别人从我们的古书里选字来做年号而感到自豪，那他应该意识到这体现的是我国古代的文化软实力，是前人天才和努力得到的认可；跟我们今人关系不大。文化的发展不仅要承前，更要启后。在我看来，这启后的部分，成败才是掌握在我们手里，最值得我们去努力的。   
 
 这次的新年号“令和”选自日本的古诗籍《万叶集》，这是一本唐朝时期的日本诗集。《万叶集》在日本的地位有点像是《诗经》在我国的地位---虽然我国已到了经济文化俱繁盛的唐朝，但在日本，这才是第一次有了成文的诗集。《万叶集》里的诗其实大多数是中文写的，或是用汉字注音，或是直接用汉语写，从用词到语法都是跟大唐一样。所以其实中国人读《万叶集》比日本人可能要更轻松些。为什么会这样？因为大唐代表了当时最先进文化的发展方向啊。  
 
@@ -46,7 +46,7 @@ tags: []
 > 真性休空走，二物长相守。这些消息阿谁知，便是无中有。  
 实鼎琼花放，玉户金光透。作个清凉彼岸人，清静工夫就。  
 
-历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人。当过全真派的掌教；见过成吉思汗;救过黎民百姓。你说尹志平这个“令和”跟新年号“令和”不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平，字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
+历史上真实的尹志平和金庸小说里写的挺不一样，是个淡泊名利，却有担当的人。当过全真派的掌教见；过成吉思汗；救过黎民百姓。你说尹志平的“令和”跟新年号“令和”意思不一样，拒绝接受这个生拉硬扣？那你看看小伊的字号：[尹志平，字大和，号清和子](https://zh.wikipedia.org/wiki/%E5%B0%B9%E5%BF%97%E5%B9%B3)。你说巧不巧？  
 
 这“师傅令和，都要奔波走”是什么鬼？原来丘处机道长也写了首《卜算子》（都要奔波走），吟完后可能觉得有点词谭独孤，寂寞沙洲冷。看到徒弟在身边，于是“小伊，给为师来一个。”于是，小伊就给师傅来了一个。丘道长的《卜算子》长什么样？请看： 
 
