--- a/content/cn/2019-03-26-.md
+++ b/content/cn/2019-03-26-.md
@@ -16,7 +16,7 @@ slug: no-say-all
 
 这话说得挺狠的。以前读过张籍和王建的诗，虽然没有特别的喜欢，但是也没有觉得特别的不堪（能在《诗镜总话》被提及，想来还是有些读头的）。我想看看张籍和王建到底写了啥，居然招致陆时雍这等批评，于是又翻了一下他们的诗作。  
 
-张籍的《节妇吟》是首很有名的政治诗，其中“还君明珠双泪垂，恨不相逢未嫁时”是很美的一句，不仅比较得体的拒绝了对立政治集团的引诱，而且也成为现在很多未得先遇的男女感叹时缘不济时常用的,简单的一句诗，道出了多少事不由人啊。  
+张籍的《节妇吟》是首很有名的政治诗，其中“还君明珠双泪垂，恨不相逢未嫁时”是很美的一句，不仅比较得体的拒绝了对立政治集团的引诱，而且也为很多未得先遇的男女所用，以感叹时缘不济。简单的一句诗，道出了多少事不由人啊。  
 
 张籍另一首名作《秋诗》也很好：
 
