--- a/content/cn/2019-03-26-xiaoxiao.md
+++ b/content/cn/2019-03-26-xiaoxiao.md
@@ -19,7 +19,7 @@ tags: []
 
 > 无边落木萧萧下，不仅长江滚滚来   
 
-的时候，请别忘了“萧萧”的声音---除了飘落的木叶，奔流的长江，杜甫还给了我们配上了秋风激动木叶时发出的肃杀之音。没有萦耳的萧萧风声的《登高》是不够美的，杜甫会怪我们给他的诗按下了静音键。      
+请别忘了“萧萧”的声音---除了飘落的木叶，奔流的长江，杜甫还给了我们配上了秋风激动木叶时发出的肃杀之音。没有萦耳的萧萧风声的《登高》是不够美的，杜甫会怪我们给他的诗按下了静音键。      
 
 “萧萧”指的仅仅是风声吗？也不是。诗经里说：
 
