--- a/content/cn/2019-04-12-hawking.md
+++ b/content/cn/2019-04-12-hawking.md
@@ -8,9 +8,9 @@ tags: []
 ---
 最近科学家们公布了黑洞的[照片](https://www.bbc.com/news/science-environment-47873592)，这是人类第一次直接观察到了黑洞。  
 
-我盯着这照片看了一会儿，没有看出什么东西来，只是觉得有点像甜甜圈，然后脑子里突然想起了霍金。  
+我盯着这照片看了一会儿，没有看出什么东西来，只是觉得有点像甜甜圈，然后突然想起了霍金。  
 
-霍金先生去年仙逝，作为他的读者，看到新闻后心里惊了一下，然后也就接受了这个事实，一如后来看到金庸先生逝世的新闻时一样的心情。网上有很多纪念的文章，朋友圈也看到很多人转发，这是很好的对科学家的纪念。也有一些朋友抒发自己的不舍，觉得很可惜---任何人的离去都是可惜的，我觉得。霍金先生享寿不短，而且身患顽疾，坚持到现在也实属不易，所以对他的离去我心里没有什么波澜。   
+霍金先生去年仙逝，作为他的读者，看到新闻后心里惊了一下，然后也就接受了这个事实，一如后来看到金庸先生逝世的新闻时。网上有很多纪念的文章，朋友圈也看到很多人转发，这是很好的对科学家的纪念。也有一些朋友抒发自己的不舍，觉得很可惜---任何人的离去都是可惜的，我觉得。霍金先生享寿不短，而且身患顽疾，坚持到现在也实属不易，所以对他的离去我心里没有什么波澜。   
 
 这次看到黑洞的照片，想起霍金是情理之中的事情，因为黑洞是霍金的主要研究对象。一个人大半辈子在研究一个从来没有见过的东西，这有点像几百年前的（神）哲学家们讨论针尖上到底站得了几个天使。不过这确是现在一些理论物理学家的境遇，到底是好是坏，就如人饮水了。（神）哲学家们的讨论依赖的是信仰和逻辑；而物理学家们的工作则依赖的是信仰，数学和逻辑。 
 
