--- a/content/cn/2019-04-01-reiwa.md
+++ b/content/cn/2019-04-01-reiwa.md
@@ -25,7 +25,7 @@ tags: []
 永和九年歳在癸丑  
 暮春之初、會于會稽山陰之蘭亭。脩禊事也。群賢畢至、少長咸集。此地有崇山、峻領茂林脩竹、又有清流激湍、暎帶左右。引以爲流觴曲水、列坐其次。雖無絲竹管弦之盛、一觴一詠、亦足以暢叙幽情。是日也、天朗氣清、惠風和暢。仰觀宇宙之大俯、察品類之盛。所以遊目騁懷、足以極視聽之娯、信可樂也。夫人之相與俯仰一世、或取諸懷抱悟言一室之内、或因寄所託、放浪形骸之外。雖趣舎萬殊、靜躁不同、當其欣於所遇、暫得於己、怏然自足、不知老之將至及。其所之既惓、情隨事遷、感慨係之矣。向之所欣、俛仰之间、以爲陳迹、猶不能不以之興懷。況脩短隨化、終期於盡。古人云死生亦大矣。豈不痛哉。毎攬昔人興感之由、若合一契。未甞不臨文嗟悼。不能喩之於懷。固知一死生爲虚誕、齊彭殤爲妄作。後之視今、亦由今之視昔。悲夫、故列叙時人、録其所述。雖世殊事異、所以興懷、其致一也。後之攬者、亦將有感於斯文。  
 
-在大伴诗序里，你有没有看到了《兰亭序》的影子？《兰亭序》确实文，字俱佳，算得上千古一绝。以前只知道有人一遍遍地摹写王右军的字，这才发现在异国也有人模仿其文。大伴旅人也随着其诗序里的“今和”二字，在一千多年后，走红上了新闻。  
+在大伴诗序里，你有没有看到了《兰亭序》的影子？《兰亭序》确实文，字俱佳，算得上千古一绝。以前只知道有人一遍遍地摹写王右军的字，这才发现在异国也有人模仿其文。大伴旅人也随着其诗序里的“今和”二字成为日本新年号，在一千多年后，走红上了新闻。  
 
 可能有看官会想，你前边还说别人用不用中华典籍取年号跟我们今人无关，不该太上心；现在又生拉硬扯地说别人是摹写《兰亭序》，这是不是有点心口不一了？  
 
