--- a/content/cn/2019-04-20-fossil.md
+++ b/content/cn/2019-04-20-fossil.md
@@ -54,7 +54,7 @@ tags: []
 
 在语言里，中文和日语形成了一个非常独特的可比对系统。唐朝的时候，日语从中文里借去了大量的词汇，还有几乎整个的汉字系统。接下来上千年的中日语言的平行进化，这短时间给了中文和日语足够的时间发展自己的系统，积累差异。在近代，日本先对西方开放，引入了大量的西方概念，进而用汉字将它们翻译到日语里，比如“细胞”，“生物”，“形而上学”等一系列概念。这些概念又由当年留学日本的中国读书人介绍回中国，进而逆向影响了中国的语言。唐朝和近代的两次语言的交汇，已经中间漫长的平行进化使得中文和日语构成了一个极好的语言进化比对系统。如果我们把词汇看做语言的“基因”，那么这些“基因”在平行进化的过程中是如何变化，又如何在交互的时期影响对方，这是我想弄明白的问题。另外，由于很多中国字词在唐朝的时候就被引入了日语，虽然在中文里，这些词的意思经历了极大的变化，但是在日语里却比较好地保留了原始意思，比如“床”字。理解日语里面一些字词的用法，似乎可以帮助我们了解汉语的过去。   
 
-矢島先生的《化石の記憶》里提到了鲁迅，这也是我感兴趣的。他说鲁迅1903年在东京发表了《中国地质略论》，在其初版中用了“殭石”一次表示化石。他介绍了鲁迅当年在东京，本来是为了学地质去的。因为他当年学完日语后原计划要上的是东京大学工学部的冶金矿床专业，不过后来变卦去学了医。  
+矢島先生的《化石の記憶》里提到了鲁迅，这也是我感兴趣的。他说鲁迅1903年在东京发表了《中国地质略论》，鲁迅在该文中用了“殭石”一次表示化石[^1]。他介绍鲁迅当年去日本留学本来是为了学地质去的，因为他学完日语后原计划要上的是东京大学工学部的冶金专业，不过后来变卦去学了医。  
 
 鲁迅在去仙台学医前的经历不为人熟悉，其实他在自己的文章里有介绍。比如在《朝花夕拾》的“琐记”里，他写道自己学的课程：
 
@@ -64,10 +64,10 @@ tags: []
 
 >今天要讲几句的话是就将这“革命时代的文学”算作题目。这学校是邀过我好几次了，我总是推宕着没有来。为什么呢？因为我想，诸君之所以来邀我，大约是因为我曾经做过几篇小说，是文学家，要从我这里听文学。其实我并不是的，并不懂什么。我首先正经学习的是开矿，叫我讲掘煤，也许比讲文学要好一些。  
 
-哈哈，要是不知道鲁迅先生的求学历程，估计要以为他说懂开矿挖煤是在吹牛了[^1]。
+哈哈，要是不知道鲁迅先生的求学历程，估计要以为他说懂开矿挖煤是在吹牛了[^2]。
 
-
-[^1]:矢島先生说2002年中国地质学会办80周年纪念的时候，将1903年鲁迅发表《中国地质略论》作为中国地质学会（1922年）成立前的地质研究“史前”事件；也把鲁迅作为了中国地质学界的先锋人物。矢島先生对此感到羡慕。
+[^1]:我看维基百科里说鲁迅是首个在汉语里使用“化石”一词的人，这和事实不符合。
+[^2]:矢島先生说2002年中国地质学会办80周年纪念的时候，将1903年鲁迅发表《中国地质略论》作为中国地质学会（1922年）成立前的地质研究“史前”事件；也把鲁迅作为了中国地质学界的先锋人物。矢島先生对此感到羡慕。
 
 
 
