add one more annotation, hopefully, the last one.

--- a/content/cn/2019-04-20-fossil.md
+++ b/content/cn/2019-04-20-fossil.md
@@ -8,7 +8,7 @@ tags: []
 ---
 翻看矢島道子《化石の記憶―古生物学の歴史をさかのぼる》的时候，读到里面有一段关于“化石”一次起源的话，我将其大意翻译如下：
 
->我的专业是研究贝虫化石，此类研究在中国也很活跃。日本的贝虫和中国的多有相似之处，所以我也阅读中国的文献。我读到的中文贝虫文献里也将化石（kaseki）写作化石（huashi）。所以我一直认为“化石”一词起源于中文。  
+>我的专业是研究贝虫化石，此类研究在中国也很活跃。日本的贝虫和中国的多有相似之处，所以我也阅读中国的文献。我读到的中文贝虫文献里也将化石（kaseki）写作化石（huashi）[^1]。所以我一直认为“化石”一词起源于中文。  
 
 >但是在学习了地质学知识后，我了解到了“化石”一词是日本发源的。从中国文法来看，“化作石头的东西”不叫化石。那中文里叫什么呢？据说中文里将其称为“殭石”。  
 
@@ -56,18 +56,19 @@ tags: []
 
 矢島先生的《化石の記憶》里提到了鲁迅，这也是我感兴趣的。他说鲁迅1903年在东京发表了《中国地质略论》，鲁迅在该文中用了“殭石”一次表示化石[^1]。他介绍鲁迅当年去日本留学本来是为了学地质去的，因为他学完日语后原计划要上的是东京大学工学部的冶金专业，不过后来变卦去学了医。  
 
-鲁迅在去仙台学医前的经历不为人熟悉，其实他在自己的文章里有介绍。比如在《朝花夕拾》的“琐记”里，他写道自己学的课程：
+鲁迅在去仙台学医前的经历不为普通读者熟悉，其实他在自己的文章里有介绍。比如在《朝花夕拾》的“琐记”里，他写道自己学的课程：
 
 >此外还有所谓格致、地学、金石学、……都非常新鲜。但是还得声明：后两项，就是现在之所谓地质学和矿物学，并非讲舆地和钟鼎碑版的。只是画铁轨横断面图却有些麻烦，平行线尤其讨厌。   
 
-另外，在黄埔军校他作了名为《革命时代的文学》的演讲。在开头他写道：
+另外，在黄埔军校鲁迅作了名为《革命时代的文学》的演讲。在开头他写道：
 
 >今天要讲几句的话是就将这“革命时代的文学”算作题目。这学校是邀过我好几次了，我总是推宕着没有来。为什么呢？因为我想，诸君之所以来邀我，大约是因为我曾经做过几篇小说，是文学家，要从我这里听文学。其实我并不是的，并不懂什么。我首先正经学习的是开矿，叫我讲掘煤，也许比讲文学要好一些。  
 
 哈哈，要是不知道鲁迅先生的求学历程，估计要以为他说懂开矿挖煤是在吹牛了[^2]。
 
-[^1]:我看维基百科里说鲁迅是首个在汉语里使用“化石”一词的人，这和事实不符合。
-[^2]:矢島先生说2002年中国地质学会办80周年纪念的时候，将1903年鲁迅发表《中国地质略论》作为中国地质学会（1922年）成立前的地质研究“史前”事件；也把鲁迅作为了中国地质学界的先锋人物。矢島先生对此感到羡慕。
+[^1]:中文和日语的“化石”一词写法相同，所以译者在此处加了中日文注音，以示区别。
+[^2]:我看维基百科里说鲁迅是首个在汉语里使用“化石”一词的人，这和事实不符合。
+[^3]:矢島先生说2002年中国地质学会办80周年纪念的时候，将1903年鲁迅发表《中国地质略论》作为中国地质学会（1922年）成立前的地质研究“史前”事件；也把鲁迅作为了中国地质学界的先锋人物。矢島先生对此感到羡慕。
 
 
 
