correct one typo

--- a/content/cn/2019-04-20-fossil.md
+++ b/content/cn/2019-04-20-fossil.md
@@ -6,7 +6,7 @@ slug: fossil
 categories: []
 tags: []
 ---
-翻看矢島道子《化石の記憶―古生物学の歴史をさかのぼる》的时候，读到里面有一段关于“化石”一次起源的话，我将其大意翻译如下：
+翻看矢島道子《化石の記憶―古生物学の歴史をさかのぼる》的时候，读到里面有一段关于“化石”一词起源的话，我将其大意翻译如下：
 
 >我的专业是研究贝虫化石，此类研究在中国也很活跃。日本的贝虫和中国的多有相似之处，所以我也阅读中国的文献。我读到的中文贝虫文献里也将化石（kaseki）写作化石（huashi）[^1]。所以我一直认为“化石”一词起源于中文。  
 
