--- a/content/cn/2019-04-20-fossil.md
+++ b/content/cn/2019-04-20-fossil.md
@@ -30,7 +30,7 @@ tags: []
 
 先别陶醉于苏曼殊先生的才情，看看其中“化石”二字。正当我觉得自己找到了化石出于中文的支持例证时，在网上看到一则由黄河清先生写的[《“化石”考源》](http://www.huayuqiao.org/articles/huangheqing/hhq14.htm)。这篇文章指出古代中文里的“化石”为动宾结构，是“化而为石”的意思，实际上是一个短语，和现今做名词用的化石是不同的。  
 
-我这才恍然大悟为何之前看着诗里的“化石”二字觉得有些违和的感觉---虽然我能理解诗中化石的含义，但是没有将它们和现代名词化了的“化石”一次作明确区分。黄河清先生还指出宋代沈括的《梦溪笔谈》里有题为“竹笋化石”和“蛇蜃化石”的两则文字，不过意思也是“化而为石”。  
+我这才恍然大悟为何之前看着诗里的“化石”二字觉得有些违和的感觉---虽然我能理解诗中化石的含义，但是没有将它们和现代名词化了的“化石”一词作明确区分。黄河清先生还指出宋代沈括的《梦溪笔谈》里有题为“竹笋化石”和“蛇蜃化石”的两则文字，不过意思也是“化而为石”。  
 
 不过，黄先生指出1876年李圭在《环游地球新录》中使用了作为名词用的“化石”一词：
 
@@ -46,17 +46,17 @@ tags: []
 2. 名词“化石”虽然在19世纪中晚期已经出现，但并没有流传开来。
 3. 化石”在沉默了20多年以后的20世纪初，终于又在汉语中出现了（1903年《新尔雅》）。  
 
-《“化石”考源》一文没有明确考证日语里什么时候开始使用“化石”一词的。只是提到意大利人马西尼认为“化石”是汉语的本族词，因为1886年的《和英英和语林集成》中还收录“化石”一词，说明那时候日语里还没有这词语；而这时候李圭等人已经在汉语里面使用名词化的“化石”一词了。所以事情可能是这样：汉语先用了“化石”一词，但是没有传播开，后来日语从汉语里面将该词借了过去，并发扬光大，最后被当做外来词又传回了中国。   
+《“化石”考源》一文没有明确考证日语里什么时候开始使用“化石”一词的。只是提到意大利人马西尼认为“化石”是汉语的本族词，因为1886年的《和英英和语林集成》中还没有收录“化石”一词，说明那时候日语里还没有这词语；而这时候李圭等人已经在汉语里面使用名词化的“化石”一词了。所以事情可能是这样：汉语先用了“化石”，但是没有传播开，后来日语从汉语里面将该词借了过去，并发扬光大，最后被当做外来词又传回了中国。   
 
-马西尼的说法让我们似乎看到了点“化石”一词源于中文的希望，可惜这个说法并不具说服力，因为没有收录入《和英英和语林集成》并不能说明日语里没有这个词。在《化石の記憶》一书里，矢島道子列举了江户时期日本学者在翻译的西洋文献里已经使用了“化石”一词，如广瀬元恭翻译的《理学提要》（1856年）；另外日本人木内石亭（1724-1808）收集了很多化石标本，并写标签记录为“某某化石”。这些名词化的“化石”一词的使用都早于李圭。
+马西尼的说法让我们似乎看到了点“化石”一词源于中文的希望，可惜这个说法并不具说服力，因为没有收录于《和英英和语林集成》并不能说明日语里没有这个词。在《化石の記憶》一书里，矢島道子列举了江户时期日本学者在翻译的西洋文献里已经使用了“化石”一词，如广瀬元恭翻译的《理学提要》（1856年）；另外日本人木内石亭（1724-1808）收集了很多化石标本，并写标签记录为“某某化石”。这些名词化的“化石”一词的使用都早于李圭。
 
-一个词是源于中文还是源于日文我觉得并不是太重要的事情，不必因之或喜或悲。那为什么我愿意花时间做这个笔记呢？因为我认为语言的进化和生物的进化在很多方面有相似之处，我对语言是如何随着时间变迁感兴趣。在做进化研究的时候，为了理解一个生物是如何进化的，往往需要找跟它有一定亲缘关系的生物，或是与其祖先形态接近的生物等做对比研究。通过对比它们的外貌生理差异，考虑它们的生存环境等因素，再去试图理解它们的进化历程。   
+一个词是源于中文还是源于日文我觉得并不是太重要的事情，不必因之或喜或悲。那为什么我愿意花时间做这个笔记呢？因为我认为语言的进化和生物的进化在很多方面有相似之处，我对语言是如何随着时间变迁的感兴趣。在做进化研究时，为了理解一个生物是如何进化的，往往需要找跟它有一定亲缘关系的生物，或是与其祖先形态接近的生物做对比研究。通过对比它们的外貌生理差异，考虑它们的生存环境等因素，再去试图理解它们的进化历程。   
 
-在语言里，中文和日语形成了一个非常独特的可比对系统。唐朝的时候，日语从中文里借去了大量的词汇，还有几乎整个的汉字系统。接下来上千年的中日语言的平行进化，这短时间给了中文和日语足够的时间发展自己的系统，积累差异。在近代，日本先对西方开放，引入了大量的西方概念，进而用汉字将它们翻译到日语里，比如“细胞”，“生物”，“形而上学”等一系列概念。这些概念又由当年留学日本的中国读书人介绍回中国，进而逆向影响了中国的语言。唐朝和近代的两次语言的交汇，已经中间漫长的平行进化使得中文和日语构成了一个极好的语言进化比对系统。如果我们把词汇看做语言的“基因”，那么这些“基因”在平行进化的过程中是如何变化，又如何在交互的时期影响对方，这是我想弄明白的问题。另外，由于很多中国字词在唐朝的时候就被引入了日语，虽然在中文里，这些词的意思经历了极大的变化，但是在日语里却比较好地保留了原始意思，比如“床”字。理解日语里面一些字词的用法，似乎可以帮助我们了解汉语的过去。   
+在语言里，中文和日语形成了一个非常独特的可比对系统。唐朝的时候，日语从中文里借去了大量的词汇，还有几乎整个的汉字系统。接下来上千年的时间里，中日语言平行进化。这段时间给了中文和日语足够的时间发展自己的系统，积累差异。在近代，日本先对西方开放，引入了大量的西方概念，进而用汉字将它们翻译到日语里，比如“细胞”，“生物”，“形而上学”等。这些概念又由当年留学日本的中国人介绍回中国，进而逆向影响了中国的语言。唐朝和近代中日的两次语言交汇，以及中间漫长的平行进化使得中文和日语构成了一个极好的语言进化研究系统。如果我们把词汇看做语言的“基因”，那么这些“基因”在平行进化的过程中是如何变化，又如何在交互的时期影响对方，这是我想弄明白的问题。另外，由于很多中国字词在唐朝的时候就被引入了日语，虽然在中文里，这些词的意思经历了极大的变化，但是在日语里却比较好地保留了原始意思，比如“床”字。理解日语里面一些字词的用法，似乎可以帮助我们了解汉语的过去。   
 
-矢島先生的《化石の記憶》里提到了鲁迅，这也是我感兴趣的。他说鲁迅1903年在东京发表了《中国地质略论》，鲁迅在该文中用了“殭石”一次表示化石[^2]。他介绍鲁迅当年去日本留学本来是为了学地质去的，因为他学完日语后原计划要上的是东京大学工学部的冶金专业，不过后来变卦去学了医。  
+矢島先生的《化石の記憶》里提到了鲁迅，这也是我感兴趣的。他说鲁迅1903年在东京发表了《中国地质略论》，鲁迅在该文中用了“殭石”一词表示化石[^2]。他介绍鲁迅当年去日本留学本来是为了学地质去的，因为他学完日语后原计划要上的是东京大学工学部的冶金专业，不过后来变卦去学了医。  
 
-鲁迅在去仙台学医前的经历不为普通读者熟悉，其实他在自己的文章里有介绍。比如在《朝花夕拾》的“琐记”里，他写道自己学的课程：
+鲁迅在去仙台学医前的经历不为普通读者熟悉，其实他在自己的文章里有介绍。比如在《朝花夕拾》的“琐记”里，他写道自己在南京的矿路学堂学习时的课程：
 
 >此外还有所谓格致、地学、金石学、……都非常新鲜。但是还得声明：后两项，就是现在之所谓地质学和矿物学，并非讲舆地和钟鼎碑版的。只是画铁轨横断面图却有些麻烦，平行线尤其讨厌。   
 
