some correction and annotation

--- a/content/cn/2019-04-23-xibie.md
+++ b/content/cn/2019-04-23-xibie.md
@@ -16,15 +16,17 @@ tags: []
 
 我常常觉得可惜，虽然鲁迅是这样滴怀念藤野先生，但毕竟“从他那一面看起来，是一去之后，杳无消息了。”同时，我也想知道鲁迅从仙台离开后，藤野先生后来如何。这里要讲得就是“惜别”之后，藤野先生的故事。  
 
-1915年，仙台医专改组为东北帝国大学医学部，而改组后，只有东京大学和京都大学毕业的老师才有资格继续留校；毕业于爱知医学校的藤野先生只能离开。离开仙台的藤野先生去了东京，接受了耳鼻喉科的讲习和实习训练，然后回家乡开了个耳鼻喉疾病的专门诊所。藤野先生对病人认真负责，对贫困的病人不收诊疗费；如果有人暂时没钱支付，他也不催，践行着“医道即仁道”的想法。  
+1915年，仙台医专改组为东北帝国大学医学部，而改组后，只有东京大学和京都大学毕业的老师才有资格继续留校；毕业于爱知医学校的藤野先生只能离开。离开仙台的藤野先生去了东京，接受了耳鼻喉科的讲习和实习训练，然后回家乡开了个耳鼻喉疾病的专门诊所。藤野先生对病人认真负责，对贫困的病人不收诊疗费；如果有人暂时没钱支付，他也不催，践行着“医道即仁道”的想法。藤野先生晚号“為庶”，表明自己是为普通民众服务的医生，这“為庶”二字，让我动容。    
 
 在日本侵华战争爆发后，藤野先生明确地表示对这场战争的反感，他说道：“中国是日本的文化老师，这样的战争应该立即结束。”于是他受到了周围一些人的厌恶。藤野先生对中国的友好是一贯如此的，他曾回忆道，说小时候受过汉文，并由此特别尊敬中国先贤，同时也由此特别爱惜来自这个国家的人。  
 
-说回鲁迅。鲁迅的文章很早就名满天下了，其中一些在他生前就被选入了日本中学生课本，其中就有《藤野先生》。有一天，一位老师问班上一位叫藤野的同学，说：这文章里说的是你的父亲吗？如果是的话，请他讲讲周桑的事情吧。这位同学就是藤野严九郎的长子藤野恆彌。   
+说回鲁迅。鲁迅的文章很早就名满天下了，生前就出了日文的《鲁迅选集》，其中就有《藤野先生》一文[^1]。有一天，一位老师问班上一位叫藤野的同学，说：这文章里说的是你的父亲吗？如果是的话，请他讲讲周桑的事情吧。这位同学就是藤野严九郎的长子藤野達也。   
 
-由此，藤野先生知道了鲁迅对自己的感激之情，也知道了鲁迅已经成为了一代文化巨擘。可惜不久之后，鲁迅就去世了，藤野先生知道消息后，接受采访回忆鲁迅。此次采访内容后来辑录为《謹んで周樹人様を憶う》一文。[^1]
+由此，藤野先生知道了鲁迅对自己的感激之情，也知道了鲁迅已经成为了一代文化巨擘。可惜不久之后，鲁迅就去世了，藤野先生知道消息后，接受采访回忆鲁迅。此次采访内容后来录为《謹んで周樹人様を憶う》[^2]一文。[^3]
 
-[^1]:此文内容主要参考了德永重良的《藤野厳九郎と魯迅をめぐって》一文。
+[^1]:此处最开始我的叙述有误，误作鲁迅文章选入日本中学课本。鲁迅文章入选日本中学生课本应该是七十年代的事情了。
+[^2]:这篇文章里有一句话“私が愛知医学専門学校から仙台に転じましたのは確か明治三十四年の暮れでした。それから二年か三年して支那から初めての留学生として入学されたのが周樹人君でした。”说的是藤野先生于明治三十四年从爱知医学校毕业后，到仙台医专工作，其后两三年，周树人作为第一个来自支那的留学生入学仙台医专。其中“支那”二字有人译为中国，有人就照直用支那，其实都不大妥。当时我国的官方称呼是大清朝，并没有中国；而直用“支那”也有些问题，因为现在“支那”带了些侮辱性，和当年的人用“支那”表达的意思有极大分别。我印象中见过一个当年留学日本的学生（或许是郁达夫）的文章，说听到别人称自己为“支那人”就很开心，我当时觉得很惊讶。但，是后来发现这是有道理的，因为当时留学日本的中国学生大多数是有排满倾向的，也就是想推翻清政府，恢复中华（鲁迅就曾明说过“驱除鞑虏，恢复中华”里的“鞑虏”是特指的清政府。）。当时日本对中国学生有两种称呼，一是满清学生，一是支那学生。这两个词都是中性的，没有褒贬，但是在排满的学生看来，他们显然更希望被称为来自“支那”的人，以表示和清朝划清界限。只是后来随着中国的积贫积弱，中国人也越来越被看不起，于是“支那”在人们口中成了一个带侮辱性的词语。我想，对于之前提到的那句话里的“支那”一词，建议照直用着两个字，然后加一个注解，以澄清词义的变化。这个注解是看了益辉留言里提到的藤野先生悼念鲁迅的文章译文后加注的，该文载于《新雨丝》。
+[^3]:此文内容主要参考了德永重良的《藤野厳九郎と魯迅をめぐって》一文。
 
 
 
