--- a/content/cn/2019-04-23-xibie.md
+++ b/content/cn/2019-04-23-xibie.md
@@ -25,7 +25,7 @@ tags: []
 由此，藤野先生知道了鲁迅对自己的感激之情，也知道了鲁迅已经成为了一代文化巨擘。可惜不久之后，鲁迅就去世了，藤野先生知道消息后，接受采访回忆鲁迅。此次采访内容后来录为《謹んで周樹人様を憶う》[^2]一文。[^3]
 
 [^1]:此处最开始我的叙述有误，误作鲁迅文章选入日本中学课本。鲁迅文章入选日本中学生课本应该是七十年代的事情了。
-[^2]:这篇文章里有一句话“私が愛知医学専門学校から仙台に転じましたのは確か明治三十四年の暮れでした。それから二年か三年して支那から初めての留学生として入学されたのが周樹人君でした。”说的是藤野先生于明治三十四年从爱知医学校毕业后，到仙台医专工作，其后两三年，周树人作为第一个来自支那的留学生入学仙台医专。其中“支那”二字有人译为中国，有人就照直用支那，其实都不大妥。当时我国的官方称呼是大清朝，并没有中国；而直用“支那”也有些问题，因为现在“支那”带了些侮辱性，和当年的人用“支那”表达的意思有极大分别。我印象中见过一个当年留学日本的学生（或许是郁达夫）的文章，说听到别人称自己为“支那人”就很开心，我当时觉得很惊讶。但，是后来发现这是有道理的，因为当时留学日本的中国学生大多数是有排满倾向的，也就是想推翻清政府，恢复中华（鲁迅就曾明说过“驱除鞑虏，恢复中华”里的“鞑虏”是特指的清政府。）。当时日本对中国学生有两种称呼，一是满清学生，一是支那学生。这两个词都是中性的，没有褒贬，但是在排满的学生看来，他们显然更希望被称为来自“支那”的人，以表示和清朝划清界限。只是后来随着中国的积贫积弱，中国人也越来越被看不起，于是“支那”在人们口中成了一个带侮辱性的词语。我想，对于之前提到的那句话里的“支那”一词，建议照直用着两个字，然后加一个注解，以澄清词义的变化。这个注解是看了益辉留言里提到的藤野先生悼念鲁迅的文章译文后加注的，该文载于《新雨丝》。
+[^2]:这篇文章里有一句话“私が愛知医学専門学校から仙台に転じましたのは確か明治三十四年の暮れでした。それから二年か三年して支那から初めての留学生として入学されたのが周樹人君でした。”说的是藤野先生于明治三十四年从爱知医学校毕业后，到仙台医专工作，其后两三年，周树人作为第一个来自支那的留学生入学仙台医专。其中“支那”二字有人译为中国，有人就照直用支那，其实都不大妥。当时我国的官方称呼是大清朝，并没有中国；而直用“支那”也有些问题，因为现在“支那”带了些侮辱性，和当年的人用“支那”表达的意思有极大分别。我印象中见过一个当年留学日本的学生（或许是郁达夫）的文章，说听到别人称自己为“支那人”就很开心，我当时觉得很惊讶。但是，后来发现这是有道理的，因为当时留学日本的中国学生大多数是有排满倾向的，也就是想推翻清政府，恢复中华（鲁迅就曾明说过“驱除鞑虏，恢复中华”里的“鞑虏”是特指的清政府。）。当时日本对中国学生有两种称呼，一是满清学生，一是支那学生。这两个词都是中性的，没有褒贬，但是在排满的学生看来，他们显然更希望被称为来自“支那”的人，以表示和清朝划清界限。只是后来随着中国的积贫积弱，中国人也越来越被看不起，于是“支那”在人们口中成了一个带侮辱性的词语。我想，对于之前提到的那句话里的“支那”一词，建议照直用着两个字，然后加一个注解，以澄清词义的变化。这个注解是看了益辉留言里提到的藤野先生悼念鲁迅的文章译文后加注的，该文载于《新雨丝》。
 [^3]:此文内容主要参考了德永重良的《藤野厳九郎と魯迅をめぐって》一文。
 
 
