--- a/content/cn/2019-04-26-ngago.md
+++ b/content/cn/2019-04-26-ngago.md
@@ -17,11 +17,11 @@ tags: []
 
 基因编辑技术就是可以精确地在基因组指定位置添加，删除或者修改 DNA 序列的技术（你可以参考对 word，text 文档的编辑）。通过上世纪四十到八十年代的一系列分子生物学进展，我们知道了 DNA 是生物遗传信息的携带者，也知道了 DNA 是如何编码遗传信息的；依靠桑格发明的测序技术和后来的高通量次代测序技术（NGS），大规模读取基因组信息成为可能。这时候，大多数生物的基因组还只是处于“只读”状态，接下来往基因组里面写入信息就成了生命科学领域人们要挑战的下一个堡垒。换句话说，人们希望实现基因编辑。首先将这个堡垒端掉，让基因组可“写”的人是在美国博德研究所工作的华人科学家张锋[^2]。2013年利用的是一种叫 CRISPR-Cas9 的基因编辑工具（说白了，就是具备定点切割 DNA 的能力）张锋实现了高效简单的真核生物细胞基因编辑。自从发现 CRISPR-Cas9 系统可以编辑基因后，挖掘各种可以编辑基因的“工具”成了新世纪的淘金，世界上很多研究组纷纷加入这个淘金行列。韩春雨发表在 *Nature Biotechnology* 上的名叫 NgAgo[^3] 的基因编辑工具被视为继 CRISPR-Cas9 后基因编辑领域的又一重大进展[^4]。可是，当世界上各个实验室使用 NgAgo 时，却发现它根本不能像文章里宣称的那样编辑基因；研究人员向韩春雨寻问实验细节时，却被他用各种理由敷衍；韩春雨还拒绝研究人员到他实验室观摩学习；在长达一年多的拉锯中，韩春雨实验室不仅不向外界出示自己的研究记录，也未能证明自己的实验的可重复性。面对各方的质疑，河北科大和韩春雨实验室在拖延一年多以后，终于承认该研究的不可重复性，撤回了发表的文章，但宣称**韩春雨没有主观地造假**。    
 
-既然韩春雨的工作不可重复已是板上钉钉，清清楚楚了，那最近这些“翻案”说是怎么来的呢？原来是 purdue 大学的 Solomon 研究组2019年4月在美国化学学会全国会议上介绍他们的研究成果，认为 NgAgo 具备可编辑基因的能力。消息源在[这里](https://www.sciencedaily.com/releases/2019/04/190403080451.htm)[^5]。这是 NgAgo 诈尸了吗？由于这篇新闻稿对 Solomon 团队的研究介绍地不清楚，看得人糊涂，于是我尝试搜索看他们有没有将这成果发表出来。幸运，虽然没有正式发表于同行评审的刊物，但是 Solomon 团队将该研究的[预印本](https://www.biorxiv.org/content/biorxiv/early/2019/04/04/597237.full.pdf)上传到了 bioRxiv 网站。  
+既然韩春雨的工作不可重复已是板上钉钉，清清楚楚了，那最近这些“翻案”说是怎么来的呢？原来是 purdue 大学的 Solomon 研究组2019年4月在美国化学学会全国会议上介绍他们的研究成果，认为 NgAgo 具备可编辑基因的能力。消息源在[这里](https://www.sciencedaily.com/releases/2019/04/190403080451.htm)[^5]。这是 NgAgo 诈尸了吗？由于这篇新闻稿对 Solomon 团队的研究介绍得不清楚，看得人糊涂，于是我尝试搜索看他们有没有将这成果发表出来。幸运，虽然没有正式发表于同行评审的刊物，但是 Solomon 团队将该研究的[预印本](https://www.biorxiv.org/content/biorxiv/early/2019/04/04/597237.full.pdf)上传到了 bioRxiv 网站。  
 
 看完这预印本文章后，对国内这些糊糊涂涂就提“翻案”的媒体我只觉得无语：写文章前能看看别人到底做了啥吗？    
 
-实际上，Solomon lab 不是首个报道 NgAgo 具备基因编辑能力的团队；第一个[报道](https://academic.oup.com/nar/article/47/7/3568/5304309)的是华中农大的 Anding Zhang 课题组。Solomon 的文章里已引用了 Zhang 等人的研究成果[^6]。但是，这些报道跟韩春雨的报道有极大的不同：  
+实际上，Solomon 实验室不是首个报道 NgAgo 具备基因编辑能力的；第一个[报道](https://academic.oup.com/nar/article/47/7/3568/5304309)的是华中农大的 Anding Zhang 课题组。Solomon 的文章里已引用了 Zhang 等人的研究成果[^6]。但是，这些报道跟韩春雨的报道有极大的不同：  
 
 1. 韩春雨报道的是 *NgAgo* 在真核生物细胞里的基因编辑能力，而 Solomon 和 Zhang 报道的是 NgAgo 在原核生物中或者体外切割 DNA 的能力。
 2. 韩春雨报道 *NgAgo* 对靶基因的定位是基于导向 DNA 的，而 Solomon 和 Zhang 报道的 *NgAgo* 对靶基因的定位是基于同源片段的。另外，Solomon 和 Zhang 研究组证明了 *NgAgo* 不具备基于导向 DNA 切割 DNA 的能力。  
